Added 14 new PDF tools: - Merge - Split - Rotate - Rearrange - Page Numbering - Watermark - Signature - Compress - Grayscale - Repair - Protect - Unlock - Metadata - PDF to Text (OCR)

--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2113,4 +2113,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">يستعيد الصور ذات الجودة المنخفضة باستخدام محول Swin2SR، الأمثل لتدهور BSRGAN. رائعة لإصلاح التحف المضغوطة الثقيلة وتحسين التفاصيل بمقياس 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">ترقية 4x باستخدام محول SwinIR المدرب على تحلل BSRGAN. يستخدم GAN للحصول على مواد أكثر وضوحًا وتفاصيل أكثر طبيعية في الصور والمشاهد المعقدة.</string>
     <string name="path">طريق</string>
+    <string name="merge_pdf">دمج قوات الدفاع الشعبي</string>
+    <string name="merge_pdf_sub">دمج ملفات PDF متعددة في وثيقة واحدة</string>
+    <string name="files_order">ترتيب الملفات</string>
+    <string name="pages_short">ص.</string>
+    <string name="split_pdf">تقسيم قوات الدفاع الشعبي</string>
+    <string name="split_pdf_sub">استخراج صفحات محددة من وثيقة PDF</string>
+    <string name="rotate_pdf">تدوير قوات الدفاع الشعبي</string>
+    <string name="rotate_pdf_sub">إصلاح اتجاه الصفحة بشكل دائم</string>
+    <string name="pages">الصفحات</string>
+    <string name="rearrange_pdf">إعادة ترتيب قوات الدفاع الشعبي</string>
+    <string name="rearrange_pdf_sub">قم بسحب وإسقاط الصفحات لإعادة ترتيبها</string>
+    <string name="hold_drag_drop">اضغط على الصفحات واسحبها</string>
+    <string name="page_numbers">أرقام الصفحات</string>
+    <string name="page_numbers_sub">أضف الترقيم إلى مستنداتك تلقائيًا</string>
+    <string name="label_format">تنسيق التسمية</string>
+    <string name="pdf_to_text">PDF إلى نص (OCR)</string>
+    <string name="pdf_to_text_sub">استخراج نص عادي من مستندات PDF الخاصة بك</string>
+    <string name="watermark_pdf_sub">تراكب نص مخصص للعلامة التجارية أو الأمان</string>
+    <string name="signature">إمضاء</string>
+    <string name="signature_sub">أضف توقيعك الإلكتروني إلى أي مستند</string>
+    <string name="will_be_for_signature">سيتم استخدام هذا كتوقيع</string>
+    <string name="unlock_pdf">فتح ملف PDF</string>
+    <string name="unlock_pdf_sub">إزالة كلمات المرور من الملفات المحمية الخاصة بك</string>
+    <string name="protect_pdf">حماية قوات الدفاع الشعبي</string>
+    <string name="protect_pdf_sub">قم بتأمين مستنداتك بتشفير قوي</string>
+    <string name="success">نجاح</string>
+    <string name="pdf_unlocked">PDF مقفل، يمكنك حفظه أو مشاركته</string>
+    <string name="repair_pdf">إصلاح قوات الدفاع الشعبي</string>
+    <string name="repair_pdf_sub">محاولة إصلاح المستندات التالفة أو غير القابلة للقراءة</string>
+    <string name="grayscale">تدرج الرمادي</string>
+    <string name="grayscale_pdf_sub">تحويل كافة الصور المضمنة في الوثيقة إلى التدرج الرمادي</string>
+    <string name="compress_pdf">ضغط قوات الدفاع الشعبي</string>
+    <string name="compress_pdf_sub">قم بتحسين حجم ملف المستند الخاص بك لتسهيل المشاركة</string>
+    <string name="repair_info">يقوم ImageToolbox بإعادة بناء جدول الإسناد الترافقي الداخلي ويعيد إنشاء بنية الملف من البداية. يمكن أن يؤدي هذا إلى استعادة الوصول إلى العديد من الملفات التي \\"لا يمكن فتحها\\"</string>
+    <string name="grayscale_info">تقوم هذه الأداة بتحويل جميع صور المستندات إلى تدرج رمادي. الأفضل للطباعة وتقليل حجم الملف</string>
+    <string name="metadata">البيانات الوصفية</string>
+    <string name="metadata_pdf_sub">تحرير خصائص الوثيقة لتحسين الخصوصية</string>
+    <string name="tags">العلامات</string>
+    <string name="producer">منتج</string>
+    <string name="author">مؤلف</string>
+    <string name="keywords">الكلمات الرئيسية</string>
+    <string name="creator">الخالق</string>
+    <string name="privacy_deep_clean">الخصوصية العميقة النظيفة</string>
+    <string name="privacy_deep_clean_sub">امسح كافة البيانات التعريفية المتوفرة لهذا المستند</string>
 </resources>
