--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2111,4 +2111,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Аднаўляе выявы нізкай якасці з дапамогай трансфарматара Swin2SR, аптымізаванага для дэградацыі BSRGAN. Выдатна падыходзіць для выпраўлення моцных артэфактаў сціску і паляпшэння дэталяў у 4-кратным маштабе.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4-кратнае павелічэнне маштабу з дапамогай трансфарматара SwinIR, навучанага дэградацыі BSRGAN. Выкарыстоўвае GAN для больш выразных тэкстур і больш натуральных дэталяў на фотаздымках і складаных сцэнах.</string>
     <string name="path">шлях</string>
+    <string name="merge_pdf">Аб\'яднаць PDF</string>
+    <string name="merge_pdf_sub">Аб\'яднайце некалькі файлаў PDF у адзін дакумент</string>
+    <string name="files_order">Парадак файлаў</string>
+    <string name="pages_short">с.</string>
+    <string name="split_pdf">Разбіць PDF</string>
+    <string name="split_pdf_sub">Выняць пэўныя старонкі з дакумента PDF</string>
+    <string name="rotate_pdf">Павярнуць pdf</string>
+    <string name="rotate_pdf_sub">Назаўжды выправіць арыентацыю старонкі</string>
+    <string name="pages">старонкі</string>
+    <string name="rearrange_pdf">Змяніць парадак pdf</string>
+    <string name="rearrange_pdf_sub">Перацягніце старонкі, каб змяніць іх парадак</string>
+    <string name="hold_drag_drop">Утрымлівайце і перацягвайце старонкі</string>
+    <string name="page_numbers">Нумары старонак</string>
+    <string name="page_numbers_sub">Аўтаматычна дадайце нумарацыю ў свае дакументы</string>
+    <string name="label_format">Фармат этыкеткі</string>
+    <string name="pdf_to_text">PDF у тэкст (OCR)</string>
+    <string name="pdf_to_text_sub">Вылучыце звычайны тэкст з дакументаў PDF</string>
+    <string name="watermark_pdf_sub">Накладанне ўласнага тэксту для брэндынгу або бяспекі</string>
+    <string name="signature">Подпіс</string>
+    <string name="signature_sub">Дадайце свой электронны подпіс да любога дакумента</string>
+    <string name="will_be_for_signature">Гэта будзе выкарыстоўвацца як подпіс</string>
+    <string name="unlock_pdf">Разблакіраваць PDF</string>
+    <string name="unlock_pdf_sub">Выдаліце ​​​​паролі з вашых абароненых файлаў</string>
+    <string name="protect_pdf">Абараніць PDF</string>
+    <string name="protect_pdf_sub">Абараніце свае дакументы з дапамогай моцнага шыфравання</string>
+    <string name="success">Поспех</string>
+    <string name="pdf_unlocked">PDF разблакіраваны, вы можаце захаваць ці падзяліцца ім</string>
+    <string name="repair_pdf">Рамонт pdf</string>
+    <string name="repair_pdf_sub">Спроба выправіць пашкоджаныя або нечытэльныя дакументы</string>
+    <string name="grayscale">Адценні шэрага</string>
+    <string name="grayscale_pdf_sub">Пераўтварыце ўсе выявы, убудаваныя ў дакумент, у адценні шэрага</string>
+    <string name="compress_pdf">Сціснуць PDF</string>
+    <string name="compress_pdf_sub">Аптымізуйце памер файла дакумента для палягчэння абмену</string>
+    <string name="repair_info">ImageToolbox аднаўляе ўнутраную табліцу крыжаваных спасылак і аднаўляе структуру файла з нуля. Гэта можа аднавіць доступ да многіх файлаў, якія \\"немагчыма адкрыць\\"</string>
+    <string name="grayscale_info">Гэты інструмент пераўтворыць усе выявы дакументаў у адценні шэрага. Лепшы для друку і памяншэння памеру файла</string>
+    <string name="metadata">Метададзеныя</string>
+    <string name="metadata_pdf_sub">Рэдагуйце ўласцівасці дакумента для лепшай прыватнасці</string>
+    <string name="tags">Тэгі</string>
+    <string name="producer">Прадзюсер</string>
+    <string name="author">Аўтар</string>
+    <string name="keywords">Ключавыя словы</string>
+    <string name="creator">Творца</string>
+    <string name="privacy_deep_clean">Прыватнасць Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Ачысціць усе даступныя метаданыя для гэтага дакумента</string>
 </resources>
