--- a/core/resources/src/main/res/values-bn/strings.xml
+++ b/core/resources/src/main/res/values-bn/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ট্রান্সফরমার ব্যবহার করে নিম্ন-মানের ছবি পুনরুদ্ধার করে, BSRGAN অবক্ষয়ের জন্য অপ্টিমাইজ করা হয়েছে। ভারী কম্প্রেশন আর্টিফ্যাক্ট ঠিক করার জন্য এবং 4x স্কেলে বিশদ উন্নত করার জন্য দুর্দান্ত।</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN অবক্ষয়ের উপর প্রশিক্ষিত SwinIR ট্রান্সফরমার সহ 4x upscaling। ফটো এবং জটিল দৃশ্যগুলিতে তীক্ষ্ণ টেক্সচার এবং আরও প্রাকৃতিক বিবরণের জন্য GAN ব্যবহার করে।</string>
     <string name="path">পথ</string>
+    <string name="merge_pdf">পিডিএফ মার্জ করুন</string>
+    <string name="merge_pdf_sub">একটি নথিতে একাধিক পিডিএফ ফাইল একত্রিত করুন</string>
+    <string name="files_order">ফাইল অর্ডার</string>
+    <string name="pages_short">পিপি</string>
+    <string name="split_pdf">পিডিএফ বিভক্ত করুন</string>
+    <string name="split_pdf_sub">পিডিএফ ডকুমেন্ট থেকে নির্দিষ্ট পৃষ্ঠাগুলি বের করুন</string>
+    <string name="rotate_pdf">পিডিএফ ঘোরান</string>
+    <string name="rotate_pdf_sub">স্থায়ীভাবে পৃষ্ঠা অভিযোজন ঠিক করুন</string>
+    <string name="pages">পাতা</string>
+    <string name="rearrange_pdf">পিডিএফ পুনরায় সাজান</string>
+    <string name="rearrange_pdf_sub">পৃষ্ঠাগুলিকে পুনরায় সাজাতে টেনে আনুন এবং ড্রপ করুন৷</string>
+    <string name="hold_drag_drop">পৃষ্ঠাগুলি ধরে রাখুন এবং টেনে আনুন</string>
+    <string name="page_numbers">পৃষ্ঠা নম্বর</string>
+    <string name="page_numbers_sub">স্বয়ংক্রিয়ভাবে আপনার নথিতে নম্বর যোগ করুন</string>
+    <string name="label_format">লেবেল বিন্যাস</string>
+    <string name="pdf_to_text">PDF থেকে পাঠ্য (OCR)</string>
+    <string name="pdf_to_text_sub">আপনার পিডিএফ ডকুমেন্ট থেকে প্লেইন টেক্সট বের করুন</string>
+    <string name="watermark_pdf_sub">ব্র্যান্ডিং বা নিরাপত্তার জন্য কাস্টম টেক্সট ওভারলে</string>
+    <string name="signature">স্বাক্ষর</string>
+    <string name="signature_sub">যেকোনো নথিতে আপনার ইলেকট্রনিক স্বাক্ষর যোগ করুন</string>
+    <string name="will_be_for_signature">এটি স্বাক্ষর হিসাবে ব্যবহার করা হবে</string>
+    <string name="unlock_pdf">পিডিএফ আনলক করুন</string>
+    <string name="unlock_pdf_sub">আপনার সুরক্ষিত ফাইল থেকে পাসওয়ার্ড সরান</string>
+    <string name="protect_pdf">পিডিএফ রক্ষা করুন</string>
+    <string name="protect_pdf_sub">শক্তিশালী এনক্রিপশন সহ আপনার নথিগুলি সুরক্ষিত করুন</string>
+    <string name="success">সফলতা</string>
+    <string name="pdf_unlocked">PDF আনলক করা হয়েছে, আপনি এটি সংরক্ষণ বা ভাগ করতে পারেন</string>
+    <string name="repair_pdf">পিডিএফ মেরামত করুন</string>
+    <string name="repair_pdf_sub">দূষিত বা অপঠনযোগ্য নথি ঠিক করার চেষ্টা করুন</string>
+    <string name="grayscale">গ্রেস্কেল</string>
+    <string name="grayscale_pdf_sub">সমস্ত নথি এমবেড করা ছবিকে গ্রেস্কেলে রূপান্তর করুন</string>
+    <string name="compress_pdf">পিডিএফ কম্প্রেস করুন</string>
+    <string name="compress_pdf_sub">সহজে ভাগ করার জন্য আপনার নথি ফাইলের আকার অপ্টিমাইজ করুন</string>
+    <string name="repair_info">ImageToolbox অভ্যন্তরীণ ক্রস-রেফারেন্স টেবিল পুনর্নির্মাণ করে এবং স্ক্র্যাচ থেকে ফাইল গঠন পুনরুত্পাদন করে। এটি অনেক ফাইলের অ্যাক্সেস পুনরুদ্ধার করতে পারে যা \\"খোলা যাবে না\\"</string>
+    <string name="grayscale_info">এই টুলটি সমস্ত নথির ছবিকে গ্রেস্কেলে রূপান্তর করে। ফাইলের আকার মুদ্রণ এবং হ্রাস করার জন্য সেরা</string>
+    <string name="metadata">মেটাডেটা</string>
+    <string name="metadata_pdf_sub">ভাল গোপনীয়তার জন্য নথি বৈশিষ্ট্য সম্পাদনা করুন</string>
+    <string name="tags">ট্যাগ</string>
+    <string name="producer">প্রযোজক</string>
+    <string name="author">লেখক</string>
+    <string name="keywords">কীওয়ার্ড</string>
+    <string name="creator">সৃষ্টিকর্তা</string>
+    <string name="privacy_deep_clean">গোপনীয়তা গভীর পরিষ্কার</string>
+    <string name="privacy_deep_clean_sub">এই নথির জন্য সমস্ত উপলব্ধ মেটাডেটা সাফ করুন</string>
 </resources>
