--- a/core/resources/src/main/res/values-ca/strings.xml
+++ b/core/resources/src/main/res/values-ca/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Restaura imatges de baixa qualitat mitjançant el transformador Swin2SR, optimitzat per a la degradació de BSRGAN. Ideal per arreglar artefactes de compressió pesats i millorar els detalls a escala 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Ampliació 4x amb transformador SwinIR entrenat en degradació BSRGAN. Utilitza GAN per obtenir textures més nítides i detalls més naturals en fotos i escenes complexes.</string>
     <string name="path">Camí</string>
+    <string name="merge_pdf">Combina PDF</string>
+    <string name="merge_pdf_sub">Combina diversos fitxers PDF en un sol document</string>
+    <string name="files_order">Ordre de fitxers</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">PDF dividit</string>
+    <string name="split_pdf_sub">Extreu pàgines específiques del document PDF</string>
+    <string name="rotate_pdf">Gira PDF</string>
+    <string name="rotate_pdf_sub">Corregiu l\'orientació de la pàgina de manera permanent</string>
+    <string name="pages">Pàgines</string>
+    <string name="rearrange_pdf">Reorganitza el PDF</string>
+    <string name="rearrange_pdf_sub">Arrossegueu i deixeu anar les pàgines per reordenar-les</string>
+    <string name="hold_drag_drop">Mantén premuda i arrossega les pàgines</string>
+    <string name="page_numbers">Números de pàgina</string>
+    <string name="page_numbers_sub">Afegiu numeració als vostres documents automàticament</string>
+    <string name="label_format">Format de l\'etiqueta</string>
+    <string name="pdf_to_text">PDF a text (OCR)</string>
+    <string name="pdf_to_text_sub">Extraieu text sense format dels vostres documents PDF</string>
+    <string name="watermark_pdf_sub">Superposeu text personalitzat per a la marca o la seguretat</string>
+    <string name="signature">Signatura</string>
+    <string name="signature_sub">Afegiu la vostra signatura electrònica a qualsevol document</string>
+    <string name="will_be_for_signature">S\'utilitzarà com a signatura</string>
+    <string name="unlock_pdf">Desbloqueja PDF</string>
+    <string name="unlock_pdf_sub">Elimineu les contrasenyes dels vostres fitxers protegits</string>
+    <string name="protect_pdf">Protegeix PDF</string>
+    <string name="protect_pdf_sub">Protegiu els vostres documents amb un xifratge fort</string>
+    <string name="success">Èxit</string>
+    <string name="pdf_unlocked">PDF desbloquejat, podeu desar-lo o compartir-lo</string>
+    <string name="repair_pdf">Reparar PDF</string>
+    <string name="repair_pdf_sub">Intenteu arreglar documents danyats o il·legibles</string>
+    <string name="grayscale">Escala de grisos</string>
+    <string name="grayscale_pdf_sub">Converteix totes les imatges incrustades del document a escala de grisos</string>
+    <string name="compress_pdf">Comprimir PDF</string>
+    <string name="compress_pdf_sub">Optimitzeu la mida del fitxer del document per compartir-lo més fàcilment</string>
+    <string name="repair_info">ImageToolbox reconstrueix la taula interna de referències creuades i regenera l\'estructura de fitxers des de zero. Això pot restaurar l\'accés a molts fitxers que \\"no es poden obrir\\"</string>
+    <string name="grayscale_info">Aquesta eina converteix totes les imatges del document a escala de grisos. El millor per imprimir i reduir la mida del fitxer</string>
+    <string name="metadata">Metadades</string>
+    <string name="metadata_pdf_sub">Editeu les propietats del document per a una millor privadesa</string>
+    <string name="tags">Etiquetes</string>
+    <string name="producer">Productor</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Paraules clau</string>
+    <string name="creator">Creador</string>
+    <string name="privacy_deep_clean">Neteja profunda de privadesa</string>
+    <string name="privacy_deep_clean_sub">Esborra totes les metadades disponibles per a aquest document</string>
 </resources>
