--- a/core/resources/src/main/res/values-cs/strings.xml
+++ b/core/resources/src/main/res/values-cs/strings.xml
@@ -2111,4 +2111,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Obnovuje obrazy nízké kvality pomocí transformátoru Swin2SR, optimalizovaného pro degradaci BSRGAN. Skvělé pro opravu těžkých kompresních artefaktů a vylepšení detailů ve 4násobném měřítku.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x upscaling s transformátorem SwinIR trénovaným na degradaci BSRGAN. Využívá GAN pro ostřejší textury a přirozenější detaily na fotografiích a složitých scénách.</string>
     <string name="path">Cesta</string>
+    <string name="merge_pdf">Sloučit PDF</string>
+    <string name="merge_pdf_sub">Spojte více souborů PDF do jednoho dokumentu</string>
+    <string name="files_order">Pořadí souborů</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Rozdělit PDF</string>
+    <string name="split_pdf_sub">Extrahujte konkrétní stránky z dokumentu PDF</string>
+    <string name="rotate_pdf">Otočit PDF</string>
+    <string name="rotate_pdf_sub">Opravte orientaci stránky trvale</string>
+    <string name="pages">Stránky</string>
+    <string name="rearrange_pdf">Přeuspořádat PDF</string>
+    <string name="rearrange_pdf_sub">Přetažením stránek změníte jejich pořadí</string>
+    <string name="hold_drag_drop">Podržte a přetáhněte stránky</string>
+    <string name="page_numbers">Čísla stránek</string>
+    <string name="page_numbers_sub">Automaticky přidejte číslování do dokumentů</string>
+    <string name="label_format">Formát štítku</string>
+    <string name="pdf_to_text">PDF na text (OCR)</string>
+    <string name="pdf_to_text_sub">Extrahujte prostý text z dokumentů PDF</string>
+    <string name="watermark_pdf_sub">Překryvný vlastní text pro branding nebo zabezpečení</string>
+    <string name="signature">Podpis</string>
+    <string name="signature_sub">Přidejte svůj elektronický podpis do jakéhokoli dokumentu</string>
+    <string name="will_be_for_signature">Toto bude použito jako podpis</string>
+    <string name="unlock_pdf">Odemknout PDF</string>
+    <string name="unlock_pdf_sub">Odstraňte hesla z chráněných souborů</string>
+    <string name="protect_pdf">Chránit PDF</string>
+    <string name="protect_pdf_sub">Zabezpečte své dokumenty pomocí silného šifrování</string>
+    <string name="success">Úspěch</string>
+    <string name="pdf_unlocked">PDF odemčené, můžete jej uložit nebo sdílet</string>
+    <string name="repair_pdf">Oprava PDF</string>
+    <string name="repair_pdf_sub">Pokuste se opravit poškozené nebo nečitelné dokumenty</string>
+    <string name="grayscale">Stupně šedi</string>
+    <string name="grayscale_pdf_sub">Převeďte všechny vložené obrázky dokumentu do stupňů šedi</string>
+    <string name="compress_pdf">Komprimovat PDF</string>
+    <string name="compress_pdf_sub">Optimalizujte velikost souboru dokumentu pro snazší sdílení</string>
+    <string name="repair_info">ImageToolbox znovu sestaví vnitřní tabulku křížových odkazů a regeneruje strukturu souborů od začátku. To může obnovit přístup k mnoha souborům, které \\"nelze otevřít\\"</string>
+    <string name="grayscale_info">Tento nástroj převede všechny obrázky dokumentů do stupňů šedi. Nejlepší pro tisk a zmenšení velikosti souboru</string>
+    <string name="metadata">Metadata</string>
+    <string name="metadata_pdf_sub">Upravte vlastnosti dokumentu pro lepší soukromí</string>
+    <string name="tags">Tagy</string>
+    <string name="producer">Výrobce</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Klíčová slova</string>
+    <string name="creator">Tvůrce</string>
+    <string name="privacy_deep_clean">Soukromí Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Vymažte všechna dostupná metadata pro tento dokument</string>
 </resources>
