--- a/core/resources/src/main/res/values-da/strings.xml
+++ b/core/resources/src/main/res/values-da/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Gendanner billeder i lav kvalitet ved hjælp af Swin2SR-transformer, optimeret til BSRGAN-nedbrydning. Fantastisk til at fikse tunge kompressionsartefakter og forbedre detaljer i 4x skala.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x opskalering med SwinIR-transformer trænet på BSRGAN-nedbrydning. Bruger GAN til skarpere teksturer og mere naturlige detaljer i fotos og komplekse scener.</string>
     <string name="path">Sti</string>
+    <string name="merge_pdf">Flet PDF</string>
+    <string name="merge_pdf_sub">Kombiner flere PDF-filer til ét dokument</string>
+    <string name="files_order">Filer rækkefølge</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Opdel PDF</string>
+    <string name="split_pdf_sub">Uddrag bestemte sider fra PDF-dokument</string>
+    <string name="rotate_pdf">Roter PDF</string>
+    <string name="rotate_pdf_sub">Ret sideretning permanent</string>
+    <string name="pages">Sider</string>
+    <string name="rearrange_pdf">Omarranger PDF</string>
+    <string name="rearrange_pdf_sub">Træk og slip sider for at omarrangere dem</string>
+    <string name="hold_drag_drop">Hold og træk sider</string>
+    <string name="page_numbers">Sidetal</string>
+    <string name="page_numbers_sub">Tilføj automatisk nummerering til dine dokumenter</string>
+    <string name="label_format">Etiketformat</string>
+    <string name="pdf_to_text">PDF til tekst (OCR)</string>
+    <string name="pdf_to_text_sub">Uddrag almindelig tekst fra dine PDF-dokumenter</string>
+    <string name="watermark_pdf_sub">Overlay tilpasset tekst til branding eller sikkerhed</string>
+    <string name="signature">Signatur</string>
+    <string name="signature_sub">Tilføj din elektroniske signatur til ethvert dokument</string>
+    <string name="will_be_for_signature">Dette vil blive brugt som signatur</string>
+    <string name="unlock_pdf">Lås PDF op</string>
+    <string name="unlock_pdf_sub">Fjern adgangskoder fra dine beskyttede filer</string>
+    <string name="protect_pdf">Beskyt PDF</string>
+    <string name="protect_pdf_sub">Beskyt dine dokumenter med stærk kryptering</string>
+    <string name="success">Succes</string>
+    <string name="pdf_unlocked">PDF ulåst, du kan gemme eller dele det</string>
+    <string name="repair_pdf">Reparation af pdf</string>
+    <string name="repair_pdf_sub">Forsøg på at rette beskadigede eller ulæselige dokumenter</string>
+    <string name="grayscale">Gråtoner</string>
+    <string name="grayscale_pdf_sub">Konverter alle dokumentindlejrede billeder til gråtoner</string>
+    <string name="compress_pdf">Komprimer PDF</string>
+    <string name="compress_pdf_sub">Optimer din dokumentfilstørrelse for nemmere deling</string>
+    <string name="repair_info">ImageToolbox genopbygger den interne krydsreferencetabel og regenererer filstrukturen fra bunden. Dette kan gendanne adgangen til mange filer, der \\"ikke kan åbnes\\"</string>
+    <string name="grayscale_info">Dette værktøj konverterer alle dokumentbilleder til gråtoner. Bedst til udskrivning og reduktion af filstørrelse</string>
+    <string name="metadata">Metadata</string>
+    <string name="metadata_pdf_sub">Rediger dokumentegenskaber for bedre privatliv</string>
+    <string name="tags">Tags</string>
+    <string name="producer">Producent</string>
+    <string name="author">Forfatter</string>
+    <string name="keywords">Nøgleord</string>
+    <string name="creator">Skaber</string>
+    <string name="privacy_deep_clean">Privatliv Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Ryd alle tilgængelige metadata for dette dokument</string>
 </resources>
