--- a/core/resources/src/main/res/values-de/strings.xml
+++ b/core/resources/src/main/res/values-de/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Stellt Bilder mit geringer Qualität mithilfe des Swin2SR-Transformators wieder her, der für die BSRGAN-Verschlechterung optimiert ist. Ideal zum Beheben starker Komprimierungsartefakte und zur Verbesserung von Details im 4-fachen Maßstab.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4-fache Hochskalierung mit SwinIR-Transformator, trainiert auf BSRGAN-Degradation. Verwendet GAN für schärfere Texturen und natürlichere Details in Fotos und komplexen Szenen.</string>
     <string name="path">Weg</string>
+    <string name="merge_pdf">PDF zusammenführen</string>
+    <string name="merge_pdf_sub">Kombinieren Sie mehrere PDF-Dateien in einem Dokument</string>
+    <string name="files_order">Dateireihenfolge</string>
+    <string name="pages_short">S.</string>
+    <string name="split_pdf">PDF teilen</string>
+    <string name="split_pdf_sub">Extrahieren Sie bestimmte Seiten aus einem PDF-Dokument</string>
+    <string name="rotate_pdf">PDF drehen</string>
+    <string name="rotate_pdf_sub">Seitenausrichtung dauerhaft korrigieren</string>
+    <string name="pages">Seiten</string>
+    <string name="rearrange_pdf">PDF neu anordnen</string>
+    <string name="rearrange_pdf_sub">Ziehen Sie Seiten per Drag-and-Drop, um sie neu anzuordnen</string>
+    <string name="hold_drag_drop">Halten und ziehen Sie Seiten</string>
+    <string name="page_numbers">Seitenzahlen</string>
+    <string name="page_numbers_sub">Fügen Sie Ihren Dokumenten automatisch eine Nummerierung hinzu</string>
+    <string name="label_format">Etikettenformat</string>
+    <string name="pdf_to_text">PDF zu Text (OCR)</string>
+    <string name="pdf_to_text_sub">Extrahieren Sie einfachen Text aus Ihren PDF-Dokumenten</string>
+    <string name="watermark_pdf_sub">Überlagern Sie benutzerdefinierten Text für Branding oder Sicherheit</string>
+    <string name="signature">Unterschrift</string>
+    <string name="signature_sub">Fügen Sie Ihre elektronische Signatur zu jedem Dokument hinzu</string>
+    <string name="will_be_for_signature">Dies wird als Signatur verwendet</string>
+    <string name="unlock_pdf">PDF entsperren</string>
+    <string name="unlock_pdf_sub">Entfernen Sie Passwörter aus Ihren geschützten Dateien</string>
+    <string name="protect_pdf">PDF schützen</string>
+    <string name="protect_pdf_sub">Sichern Sie Ihre Dokumente mit starker Verschlüsselung</string>
+    <string name="success">Erfolg</string>
+    <string name="pdf_unlocked">PDF entsperrt, Sie können es speichern oder teilen</string>
+    <string name="repair_pdf">PDF reparieren</string>
+    <string name="repair_pdf_sub">Versuchen Sie, beschädigte oder unleserliche Dokumente zu reparieren</string>
+    <string name="grayscale">Graustufen</string>
+    <string name="grayscale_pdf_sub">Konvertieren Sie alle in Dokumente eingebetteten Bilder in Graustufen</string>
+    <string name="compress_pdf">PDF komprimieren</string>
+    <string name="compress_pdf_sub">Optimieren Sie die Dateigröße Ihres Dokuments für eine einfachere Weitergabe</string>
+    <string name="repair_info">ImageToolbox erstellt die interne Querverweistabelle neu und generiert die Dateistruktur von Grund auf neu. Dadurch kann der Zugriff auf viele Dateien wiederhergestellt werden, die „nicht geöffnet werden können“.</string>
+    <string name="grayscale_info">Dieses Tool konvertiert alle Dokumentbilder in Graustufen. Am besten zum Drucken und Reduzieren der Dateigröße geeignet</string>
+    <string name="metadata">Metadaten</string>
+    <string name="metadata_pdf_sub">Bearbeiten Sie die Dokumenteigenschaften, um den Datenschutz zu verbessern</string>
+    <string name="tags">Schlagworte</string>
+    <string name="producer">Produzent</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Schlüsselwörter</string>
+    <string name="creator">Schöpfer</string>
+    <string name="privacy_deep_clean">Privatsphäre tief reinigen</string>
+    <string name="privacy_deep_clean_sub">Löschen Sie alle verfügbaren Metadaten für dieses Dokument</string>
 </resources>
