--- a/core/resources/src/main/res/values-es/strings.xml
+++ b/core/resources/src/main/res/values-es/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Restaura imágenes de baja calidad utilizando el transformador Swin2SR, optimizado para la degradación de BSRGAN. Excelente para corregir artefactos de compresión intensa y mejorar detalles a escala 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Ampliación 4x con transformador SwinIR entrenado en degradación de BSRGAN. Utiliza GAN para obtener texturas más nítidas y detalles más naturales en fotografías y escenas complejas.</string>
     <string name="path">Camino</string>
+    <string name="merge_pdf">Fusionar PDF</string>
+    <string name="merge_pdf_sub">Combine varios archivos PDF en un solo documento</string>
+    <string name="files_order">Orden de archivos</string>
+    <string name="pages_short">páginas.</string>
+    <string name="split_pdf">Dividir PDF</string>
+    <string name="split_pdf_sub">Extraiga páginas específicas de un documento PDF</string>
+    <string name="rotate_pdf">Girar PDF</string>
+    <string name="rotate_pdf_sub">Corregir la orientación de la página permanentemente</string>
+    <string name="pages">paginas</string>
+    <string name="rearrange_pdf">Reorganizar PDF</string>
+    <string name="rearrange_pdf_sub">Arrastra y suelta páginas para reordenarlas</string>
+    <string name="hold_drag_drop">Sostener y arrastrar páginas</string>
+    <string name="page_numbers">Números de página</string>
+    <string name="page_numbers_sub">Añade numeración a tus documentos automáticamente</string>
+    <string name="label_format">Formato de etiqueta</string>
+    <string name="pdf_to_text">PDF a texto (OCR)</string>
+    <string name="pdf_to_text_sub">Extraiga texto sin formato de sus documentos PDF</string>
+    <string name="watermark_pdf_sub">Superponer texto personalizado para marca o seguridad</string>
+    <string name="signature">Firma</string>
+    <string name="signature_sub">Añade tu firma electrónica a cualquier documento</string>
+    <string name="will_be_for_signature">Esto se utilizará como firma.</string>
+    <string name="unlock_pdf">Desbloquear PDF</string>
+    <string name="unlock_pdf_sub">Elimina contraseñas de tus archivos protegidos</string>
+    <string name="protect_pdf">Proteger PDF</string>
+    <string name="protect_pdf_sub">Proteja sus documentos con un cifrado seguro</string>
+    <string name="success">Éxito</string>
+    <string name="pdf_unlocked">PDF desbloqueado, puedes guardarlo o compartirlo</string>
+    <string name="repair_pdf">Reparar PDF</string>
+    <string name="repair_pdf_sub">Intente reparar documentos corruptos o ilegibles</string>
+    <string name="grayscale">Escala de grises</string>
+    <string name="grayscale_pdf_sub">Convierta todas las imágenes incrustadas en documentos a escala de grises</string>
+    <string name="compress_pdf">Comprimir PDF</string>
+    <string name="compress_pdf_sub">Optimice el tamaño del archivo de su documento para compartirlo más fácilmente</string>
+    <string name="repair_info">ImageToolbox reconstruye la tabla de referencias cruzadas interna y regenera la estructura del archivo desde cero. Esto puede restaurar el acceso a muchos archivos que \\"no se pueden abrir\\"</string>
+    <string name="grayscale_info">Esta herramienta convierte todas las imágenes de documentos a escala de grises. Lo mejor para imprimir y reducir el tamaño del archivo</string>
+    <string name="metadata">Metadatos</string>
+    <string name="metadata_pdf_sub">Edite las propiedades del documento para una mayor privacidad</string>
+    <string name="tags">Etiquetas</string>
+    <string name="producer">Productor</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Palabras clave</string>
+    <string name="creator">Creador</string>
+    <string name="privacy_deep_clean">Limpieza profunda de privacidad</string>
+    <string name="privacy_deep_clean_sub">Borrar todos los metadatos disponibles para este documento</string>
 </resources>
