--- a/core/resources/src/main/res/values-et/strings.xml
+++ b/core/resources/src/main/res/values-et/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Taastab madala kvaliteediga pildid, kasutades Swin2SR-i trafot, mis on optimeeritud BSRGAN-i halvenemise jaoks. Suurepärane raskete kokkusurutud artefaktide kinnitamiseks ja detailide täiustamiseks 4x skaalal.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x ülesskaleerimine SwinIR-trafoga, mis on koolitatud BSRGANi halvenemise kohta. Kasutab GAN-i teravamate tekstuuride ja loomulikumate detailide saamiseks fotodel ja keerulistes stseenides.</string>
     <string name="path">Tee</string>
+    <string name="merge_pdf">Ühendage PDF</string>
+    <string name="merge_pdf_sub">Ühendage mitu PDF-faili üheks dokumendiks</string>
+    <string name="files_order">Failide järjestus</string>
+    <string name="pages_short">lk.</string>
+    <string name="split_pdf">Poolita PDF</string>
+    <string name="split_pdf_sub">Ekstraktige PDF-dokumendist konkreetsed lehed</string>
+    <string name="rotate_pdf">Pöörake PDF-i</string>
+    <string name="rotate_pdf_sub">Parandage lehe orientatsioon jäädavalt</string>
+    <string name="pages">Leheküljed</string>
+    <string name="rearrange_pdf">PDF-i ümberkorraldamine</string>
+    <string name="rearrange_pdf_sub">Lehtede järjestuse muutmiseks pukseerige</string>
+    <string name="hold_drag_drop">Hoia ja lohista lehti</string>
+    <string name="page_numbers">Lehekülje numbrid</string>
+    <string name="page_numbers_sub">Lisage oma dokumentidele automaatselt nummerdamine</string>
+    <string name="label_format">Sildi vorming</string>
+    <string name="pdf_to_text">PDF tekstiks (OCR)</string>
+    <string name="pdf_to_text_sub">Ekstraktige oma PDF-dokumentidest lihttekst</string>
+    <string name="watermark_pdf_sub">Ülekate kohandatud tekst kaubamärgi või turvalisuse jaoks</string>
+    <string name="signature">Allkiri</string>
+    <string name="signature_sub">Lisage oma elektrooniline allkiri mis tahes dokumendile</string>
+    <string name="will_be_for_signature">Seda kasutatakse allkirjana</string>
+    <string name="unlock_pdf">Avage PDF</string>
+    <string name="unlock_pdf_sub">Eemaldage kaitstud failidest paroolid</string>
+    <string name="protect_pdf">Kaitske PDF-i</string>
+    <string name="protect_pdf_sub">Kaitske oma dokumente tugeva krüptimisega</string>
+    <string name="success">Edu</string>
+    <string name="pdf_unlocked">PDF on lukustamata, saate seda salvestada või jagada</string>
+    <string name="repair_pdf">Parandage PDF</string>
+    <string name="repair_pdf_sub">Proovige parandada rikutud või loetamatud dokumente</string>
+    <string name="grayscale">Halltoonid</string>
+    <string name="grayscale_pdf_sub">Teisendage kõik dokumendi manustatud pildid halltoonides</string>
+    <string name="compress_pdf">Tihendage PDF</string>
+    <string name="compress_pdf_sub">Lihtsamaks jagamiseks optimeerige oma dokumendi faili suurust</string>
+    <string name="repair_info">ImageToolbox taastab sisemise ristviidetabeli ja taastab failistruktuuri nullist. See võib taastada juurdepääsu paljudele failidele, mida \\"ei saa avada\\"</string>
+    <string name="grayscale_info">See tööriist teisendab kõik dokumendipildid halltoonides. Parim printimiseks ja faili suuruse vähendamiseks</string>
+    <string name="metadata">Metaandmed</string>
+    <string name="metadata_pdf_sub">Parema privaatsuse tagamiseks muutke dokumendi atribuute</string>
+    <string name="tags">Sildid</string>
+    <string name="producer">Tootja</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Märksõnad</string>
+    <string name="creator">Looja</string>
+    <string name="privacy_deep_clean">Privaatsus sügavpuhastus</string>
+    <string name="privacy_deep_clean_sub">Kustutage kõik selle dokumendi saadaolevad metaandmed</string>
 </resources>
