--- a/core/resources/src/main/res/values-eu/strings.xml
+++ b/core/resources/src/main/res/values-eu/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Kalitate baxuko irudiak leheneratzen ditu Swin2SR transformagailua erabiliz, BSRGAN degradaziorako optimizatuta. Konpresio-artefaktu astunak konpontzeko eta xehetasunak 4x eskalan hobetzeko bikaina.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x igoera BSRGAN degradazioan trebatutako SwinIR transformadorearekin. GAN erabiltzen du testura zorrotzagoak eta xehetasun naturalagoak lortzeko argazkietan eta eszena konplexuetan.</string>
     <string name="path">Bidea</string>
+    <string name="merge_pdf">Batu PDFa</string>
+    <string name="merge_pdf_sub">Konbinatu hainbat PDF fitxategi dokumentu batean</string>
+    <string name="files_order">Fitxategien ordena</string>
+    <string name="pages_short">orr.</string>
+    <string name="split_pdf">Zatitu PDFa</string>
+    <string name="split_pdf_sub">Atera orri zehatzak PDF dokumentutik</string>
+    <string name="rotate_pdf">Biratu PDFa</string>
+    <string name="rotate_pdf_sub">Konpondu orriaren orientazioa betirako</string>
+    <string name="pages">Orriak</string>
+    <string name="rearrange_pdf">Berrantolatu PDFa</string>
+    <string name="rearrange_pdf_sub">Arrastatu eta jaregin orriak ordenatzeko</string>
+    <string name="hold_drag_drop">Eutsi eta arrastatu orriak</string>
+    <string name="page_numbers">Orrialde Zenbakiak</string>
+    <string name="page_numbers_sub">Gehitu zenbakiak zure dokumentuei automatikoki</string>
+    <string name="label_format">Etiketa formatua</string>
+    <string name="pdf_to_text">PDF testura (OCR)</string>
+    <string name="pdf_to_text_sub">Atera testu arrunta zure PDF dokumentuetatik</string>
+    <string name="watermark_pdf_sub">Testu pertsonalizatua gainjarri marka edo segurtasunerako</string>
+    <string name="signature">Sinadura</string>
+    <string name="signature_sub">Gehitu zure sinadura elektronikoa edozein dokumentutan</string>
+    <string name="will_be_for_signature">Hau sinadura gisa erabiliko da</string>
+    <string name="unlock_pdf">Desblokeatu PDFa</string>
+    <string name="unlock_pdf_sub">Kendu pasahitzak babestutako fitxategietatik</string>
+    <string name="protect_pdf">Babestu PDFa</string>
+    <string name="protect_pdf_sub">Babestu zure dokumentuak enkriptazio sendoarekin</string>
+    <string name="success">Arrakasta</string>
+    <string name="pdf_unlocked">PDF desblokeatua, gorde edo parteka dezakezu</string>
+    <string name="repair_pdf">PDFa konpondu</string>
+    <string name="repair_pdf_sub">Saiatu hondatuta dauden edo irakurezinak diren dokumentuak konpontzen</string>
+    <string name="grayscale">Grisen eskala</string>
+    <string name="grayscale_pdf_sub">Bihurtu dokumentu txertatutako irudi guztiak gris-eskalara</string>
+    <string name="compress_pdf">Konprimitu PDFa</string>
+    <string name="compress_pdf_sub">Optimizatu zure dokumentu-fitxategiaren tamaina errazago partekatzeko</string>
+    <string name="repair_info">ImageToolbox-ek barne-erreferentzia gurutzatuen taula berreraikitzen du eta fitxategi-egitura hutsetik birsortzen du. Honek \\"ireki ezin diren\\" fitxategi askotarako sarbidea berrezarri dezake</string>
+    <string name="grayscale_info">Tresna honek dokumentuen irudi guztiak gris-eskala bihurtzen ditu. Fitxategien tamaina murrizteko eta inprimatzeko onena</string>
+    <string name="metadata">Metadatuak</string>
+    <string name="metadata_pdf_sub">Editatu dokumentuaren propietateak pribatutasun hobea izateko</string>
+    <string name="tags">Etiketak</string>
+    <string name="producer">Ekoizlea</string>
+    <string name="author">Egilea</string>
+    <string name="keywords">Gako-hitzak</string>
+    <string name="creator">Sortzailea</string>
+    <string name="privacy_deep_clean">Pribatutasuna Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Garbitu dokumentu honetarako erabilgarri dauden metadatu guztiak</string>
 </resources>
