--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">تصاویر با کیفیت پایین را با استفاده از ترانسفورماتور Swin2SR که برای تخریب BSRGAN بهینه شده است، بازیابی می کند. برای تثبیت مصنوعات فشرده سازی سنگین و بهبود جزئیات در مقیاس 4 برابر عالی است.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">ارتقاء 4 برابری با ترانسفورماتور SwinIR آموزش دیده در مورد تخریب BSRGAN. از GAN برای بافت های واضح تر و جزئیات طبیعی تر در عکس ها و صحنه های پیچیده استفاده می کند.</string>
     <string name="path">مسیر</string>
+    <string name="merge_pdf">PDF را ادغام کنید</string>
+    <string name="merge_pdf_sub">چندین فایل PDF را در یک سند ترکیب کنید</string>
+    <string name="files_order">ترتیب فایل ها</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">تقسیم PDF</string>
+    <string name="split_pdf_sub">صفحات خاصی را از سند PDF استخراج کنید</string>
+    <string name="rotate_pdf">PDF را بچرخانید</string>
+    <string name="rotate_pdf_sub">جهت گیری صفحه را به طور دائم رفع کنید</string>
+    <string name="pages">صفحات</string>
+    <string name="rearrange_pdf">پی دی اف را دوباره تنظیم کنید</string>
+    <string name="rearrange_pdf_sub">صفحات را بکشید و رها کنید تا آنها را دوباره مرتب کنید</string>
+    <string name="hold_drag_drop">صفحات را نگه و بکشید</string>
+    <string name="page_numbers">شماره صفحه</string>
+    <string name="page_numbers_sub">شماره گذاری را به صورت خودکار به اسناد خود اضافه کنید</string>
+    <string name="label_format">قالب برچسب</string>
+    <string name="pdf_to_text">PDF به متن (OCR)</string>
+    <string name="pdf_to_text_sub">متن ساده را از اسناد PDF خود استخراج کنید</string>
+    <string name="watermark_pdf_sub">متن سفارشی را برای نام تجاری یا امنیت پوشش دهید</string>
+    <string name="signature">امضا</string>
+    <string name="signature_sub">امضای الکترونیکی خود را به هر سندی اضافه کنید</string>
+    <string name="will_be_for_signature">این به عنوان امضا استفاده خواهد شد</string>
+    <string name="unlock_pdf">قفل PDF را باز کنید</string>
+    <string name="unlock_pdf_sub">رمزهای عبور را از فایل های محافظت شده خود حذف کنید</string>
+    <string name="protect_pdf">محافظت از PDF</string>
+    <string name="protect_pdf_sub">اسناد خود را با رمزگذاری قوی ایمن کنید</string>
+    <string name="success">موفقیت</string>
+    <string name="pdf_unlocked">PDF باز شد، می توانید آن را ذخیره یا به اشتراک بگذارید</string>
+    <string name="repair_pdf">PDF را تعمیر کنید</string>
+    <string name="repair_pdf_sub">تلاش برای تعمیر اسناد خراب یا ناخوانا</string>
+    <string name="grayscale">مقیاس خاکستری</string>
+    <string name="grayscale_pdf_sub">همه تصاویر جاسازی شده سند را به مقیاس خاکستری تبدیل کنید</string>
+    <string name="compress_pdf">فشرده سازی PDF</string>
+    <string name="compress_pdf_sub">اندازه فایل سند خود را برای اشتراک گذاری آسان تر بهینه کنید</string>
+    <string name="repair_info">ImageToolbox جدول مرجع متقابل داخلی را بازسازی می کند و ساختار فایل را از ابتدا بازسازی می کند. این می‌تواند دسترسی به بسیاری از فایل‌هایی را که \\"باز نمی‌شوند\\" بازیابی کند.</string>
+    <string name="grayscale_info">این ابزار تمام تصاویر سند را به مقیاس خاکستری تبدیل می کند. بهترین برای چاپ و کاهش حجم فایل</string>
+    <string name="metadata">فراداده</string>
+    <string name="metadata_pdf_sub">ویژگی های سند را برای حفظ حریم خصوصی بهتر ویرایش کنید</string>
+    <string name="tags">برچسب ها</string>
+    <string name="producer">تولید کننده</string>
+    <string name="author">نویسنده</string>
+    <string name="keywords">کلمات کلیدی</string>
+    <string name="creator">خالق</string>
+    <string name="privacy_deep_clean">حفظ حریم خصوصی Deep Clean</string>
+    <string name="privacy_deep_clean_sub">تمام ابرداده های موجود برای این سند را پاک کنید</string>
 </resources>
