--- a/core/resources/src/main/res/values-fi/strings.xml
+++ b/core/resources/src/main/res/values-fi/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Palauttaa huonolaatuiset kuvat käyttämällä Swin2SR-muuntajaa, joka on optimoitu BSRGANin heikkenemistä varten. Erinomainen raskaiden puristusartefaktien korjaamiseen ja yksityiskohtien parantamiseen 4x mittakaavassa.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4-kertainen skaalaus SwinIR-muuntajalla, joka on koulutettu BSRGANin heikkenemiseen. Käyttää GAN-tekniikkaa terävämpiin tekstuuriin ja luonnollisempiin yksityiskohtiin valokuvissa ja monimutkaisissa kohtauksissa.</string>
     <string name="path">Polku</string>
+    <string name="merge_pdf">Yhdistä PDF</string>
+    <string name="merge_pdf_sub">Yhdistä useita PDF-tiedostoja yhdeksi asiakirjaksi</string>
+    <string name="files_order">Tiedostojen järjestys</string>
+    <string name="pages_short">s.</string>
+    <string name="split_pdf">Jaa PDF</string>
+    <string name="split_pdf_sub">Pura tietyt sivut PDF-dokumentista</string>
+    <string name="rotate_pdf">Kierrä PDF</string>
+    <string name="rotate_pdf_sub">Korjaa sivun suunta pysyvästi</string>
+    <string name="pages">Sivut</string>
+    <string name="rearrange_pdf">Järjestä PDF uudelleen</string>
+    <string name="rearrange_pdf_sub">Järjestä sivut uudelleen vetämällä ja pudottamalla</string>
+    <string name="hold_drag_drop">Pidä ja vedä sivuja</string>
+    <string name="page_numbers">Sivunumerot</string>
+    <string name="page_numbers_sub">Lisää numerointi asiakirjoihin automaattisesti</string>
+    <string name="label_format">Label Format</string>
+    <string name="pdf_to_text">PDF tekstiksi (OCR)</string>
+    <string name="pdf_to_text_sub">Pura pelkkää tekstiä PDF-dokumenteistasi</string>
+    <string name="watermark_pdf_sub">Peittoteksti brändäystä tai turvallisuutta varten</string>
+    <string name="signature">Allekirjoitus</string>
+    <string name="signature_sub">Lisää sähköinen allekirjoituksesi mihin tahansa asiakirjaan</string>
+    <string name="will_be_for_signature">Tätä käytetään allekirjoituksena</string>
+    <string name="unlock_pdf">Avaa PDF</string>
+    <string name="unlock_pdf_sub">Poista salasanat suojatuista tiedostoistasi</string>
+    <string name="protect_pdf">Suojaa PDF</string>
+    <string name="protect_pdf_sub">Suojaa asiakirjasi vahvalla salauksella</string>
+    <string name="success">Menestys</string>
+    <string name="pdf_unlocked">PDF avattu, voit tallentaa tai jakaa sen</string>
+    <string name="repair_pdf">Korjaa PDF</string>
+    <string name="repair_pdf_sub">Yritä korjata vioittuneet tai lukukelvottomat asiakirjat</string>
+    <string name="grayscale">Harmaasävy</string>
+    <string name="grayscale_pdf_sub">Muunna kaikki asiakirjan upotetut kuvat harmaasävyiksi</string>
+    <string name="compress_pdf">Pakkaa PDF</string>
+    <string name="compress_pdf_sub">Optimoi asiakirjatiedoston koko helpottamaan jakamista</string>
+    <string name="repair_info">ImageToolbox rakentaa sisäisen ristiviittaustaulukon uudelleen ja luo tiedostorakenteen uudelleen tyhjästä. Tämä voi palauttaa pääsyn moniin tiedostoihin, joita \\"ei voi avata\\"</string>
+    <string name="grayscale_info">Tämä työkalu muuntaa kaikki asiakirjan kuvat harmaasävyiksi. Paras tulostukseen ja tiedostokoon pienentämiseen</string>
+    <string name="metadata">Metatiedot</string>
+    <string name="metadata_pdf_sub">Muokkaa asiakirjan ominaisuuksia parantaaksesi yksityisyyttä</string>
+    <string name="tags">Tunnisteet</string>
+    <string name="producer">Tuottaja</string>
+    <string name="author">Tekijä</string>
+    <string name="keywords">Avainsanat</string>
+    <string name="creator">Luoja</string>
+    <string name="privacy_deep_clean">Yksityisyys syväpuhdistus</string>
+    <string name="privacy_deep_clean_sub">Tyhjennä kaikki tämän asiakirjan saatavilla olevat metatiedot</string>
 </resources>
