--- a/core/resources/src/main/res/values-fil/strings.xml
+++ b/core/resources/src/main/res/values-fil/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Ibinabalik ang mababang kalidad na mga larawan gamit ang Swin2SR transformer, na na-optimize para sa BSRGAN degradation. Mahusay para sa pag-aayos ng mga heavy compression artifact at pagpapahusay ng mga detalye sa 4x scale.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x na upscaling gamit ang SwinIR transformer na sinanay sa BSRGAN degradation. Gumagamit ng GAN para sa mas matalas na mga texture at mas natural na mga detalye sa mga larawan at kumplikadong mga eksena.</string>
     <string name="path">Daan</string>
+    <string name="merge_pdf">Pagsamahin ang PDF</string>
+    <string name="merge_pdf_sub">Pagsamahin ang maramihang mga PDF file sa isang dokumento</string>
+    <string name="files_order">Pagkakasunud-sunod ng mga File</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Hatiin ang PDF</string>
+    <string name="split_pdf_sub">I-extract ang mga partikular na pahina mula sa PDF na dokumento</string>
+    <string name="rotate_pdf">I-rotate ang PDF</string>
+    <string name="rotate_pdf_sub">Permanenteng ayusin ang oryentasyon ng page</string>
+    <string name="pages">Mga pahina</string>
+    <string name="rearrange_pdf">Ayusin muli ang PDF</string>
+    <string name="rearrange_pdf_sub">I-drag at i-drop ang mga pahina upang muling ayusin ang mga ito</string>
+    <string name="hold_drag_drop">Hawakan at I-drag ang mga pahina</string>
+    <string name="page_numbers">Mga Numero ng Pahina</string>
+    <string name="page_numbers_sub">Awtomatikong magdagdag ng pagnunumero sa iyong mga dokumento</string>
+    <string name="label_format">Format ng Label</string>
+    <string name="pdf_to_text">PDF to Text (OCR)</string>
+    <string name="pdf_to_text_sub">I-extract ang plain text mula sa iyong mga PDF na dokumento</string>
+    <string name="watermark_pdf_sub">I-overlay ang custom na text para sa pagba-brand o seguridad</string>
+    <string name="signature">Lagda</string>
+    <string name="signature_sub">Idagdag ang iyong electronic signature sa anumang dokumento</string>
+    <string name="will_be_for_signature">Ito ay gagamitin bilang lagda</string>
+    <string name="unlock_pdf">I-unlock ang PDF</string>
+    <string name="unlock_pdf_sub">Alisin ang mga password mula sa iyong mga protektadong file</string>
+    <string name="protect_pdf">Protektahan ang PDF</string>
+    <string name="protect_pdf_sub">I-secure ang iyong mga dokumento gamit ang malakas na pag-encrypt</string>
+    <string name="success">Tagumpay</string>
+    <string name="pdf_unlocked">Na-unlock ang PDF, maaari mong i-save o ibahagi ito</string>
+    <string name="repair_pdf">Ayusin ang PDF</string>
+    <string name="repair_pdf_sub">Subukang ayusin ang mga sira o hindi nababasang mga dokumento</string>
+    <string name="grayscale">Grayscale</string>
+    <string name="grayscale_pdf_sub">I-convert ang lahat ng mga larawang naka-embed na dokumento sa grayscale</string>
+    <string name="compress_pdf">I-compress ang PDF</string>
+    <string name="compress_pdf_sub">I-optimize ang laki ng iyong file ng dokumento para sa mas madaling pagbabahagi</string>
+    <string name="repair_info">Ang ImageToolbox ay muling itinatayo ang panloob na cross-reference na talahanayan at muling nabuo ang istraktura ng file mula sa simula. Maaari nitong ibalik ang access sa maraming file na \\"hindi mabubuksan\\"</string>
+    <string name="grayscale_info">Kino-convert ng tool na ito ang lahat ng mga imahe ng dokumento sa grayscale. Pinakamahusay para sa pag-print at pagbabawas ng laki ng file</string>
+    <string name="metadata">Metadata</string>
+    <string name="metadata_pdf_sub">I-edit ang mga katangian ng dokumento para sa mas mahusay na privacy</string>
+    <string name="tags">Mga tag</string>
+    <string name="producer">Producer</string>
+    <string name="author">May-akda</string>
+    <string name="keywords">Mga keyword</string>
+    <string name="creator">Tagapaglikha</string>
+    <string name="privacy_deep_clean">Privacy Deep Clean</string>
+    <string name="privacy_deep_clean_sub">I-clear ang lahat ng available na metadata para sa dokumentong ito</string>
 </resources>
