--- a/core/resources/src/main/res/values-fr/strings.xml
+++ b/core/resources/src/main/res/values-fr/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Restaure les images de faible qualité à l\'aide du transformateur Swin2SR, optimisé pour la dégradation BSRGAN. Idéal pour corriger les artefacts de compression importants et améliorer les détails à une échelle 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Mise à l\'échelle 4x avec le transformateur SwinIR formé à la dégradation BSRGAN. Utilise GAN pour des textures plus nettes et des détails plus naturels dans les photos et les scènes complexes.</string>
     <string name="path">Chemin</string>
+    <string name="merge_pdf">Fusionner un PDF</string>
+    <string name="merge_pdf_sub">Combinez plusieurs fichiers PDF en un seul document</string>
+    <string name="files_order">Ordre des fichiers</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Fractionner un PDF</string>
+    <string name="split_pdf_sub">Extraire des pages spécifiques d\'un document PDF</string>
+    <string name="rotate_pdf">Faire pivoter le PDF</string>
+    <string name="rotate_pdf_sub">Corriger l\'orientation de la page de manière permanente</string>
+    <string name="pages">Pages</string>
+    <string name="rearrange_pdf">Réorganiser le PDF</string>
+    <string name="rearrange_pdf_sub">Glissez et déposez les pages pour les réorganiser</string>
+    <string name="hold_drag_drop">Maintenir et faire glisser les pages</string>
+    <string name="page_numbers">Numéros de pages</string>
+    <string name="page_numbers_sub">Ajoutez automatiquement une numérotation à vos documents</string>
+    <string name="label_format">Format d\'étiquette</string>
+    <string name="pdf_to_text">PDF en texte (OCR)</string>
+    <string name="pdf_to_text_sub">Extrayez le texte brut de vos documents PDF</string>
+    <string name="watermark_pdf_sub">Superposer du texte personnalisé pour la marque ou la sécurité</string>
+    <string name="signature">Signature</string>
+    <string name="signature_sub">Ajoutez votre signature électronique à n\'importe quel document</string>
+    <string name="will_be_for_signature">Ceci servira de signature</string>
+    <string name="unlock_pdf">Déverrouiller le PDF</string>
+    <string name="unlock_pdf_sub">Supprimez les mots de passe de vos fichiers protégés</string>
+    <string name="protect_pdf">Protéger le PDF</string>
+    <string name="protect_pdf_sub">Sécurisez vos documents avec un cryptage fort</string>
+    <string name="success">Succès</string>
+    <string name="pdf_unlocked">PDF déverrouillé, vous pouvez l\'enregistrer ou le partager</string>
+    <string name="repair_pdf">Réparer le PDF</string>
+    <string name="repair_pdf_sub">Tentative de réparation de documents corrompus ou illisibles</string>
+    <string name="grayscale">Niveaux de gris</string>
+    <string name="grayscale_pdf_sub">Convertir toutes les images intégrées au document en niveaux de gris</string>
+    <string name="compress_pdf">Compresser un PDF</string>
+    <string name="compress_pdf_sub">Optimisez la taille de votre fichier de document pour un partage plus facile</string>
+    <string name="repair_info">ImageToolbox reconstruit la table de références croisées interne et régénère la structure des fichiers à partir de zéro. Cela peut restaurer l\'accès à de nombreux fichiers qui \\"ne peuvent pas être ouverts\\"</string>
+    <string name="grayscale_info">Cet outil convertit toutes les images du document en niveaux de gris. Idéal pour imprimer et réduire la taille des fichiers</string>
+    <string name="metadata">Métadonnées</string>
+    <string name="metadata_pdf_sub">Modifier les propriétés du document pour une meilleure confidentialité</string>
+    <string name="tags">Balises</string>
+    <string name="producer">Producteur</string>
+    <string name="author">Auteur</string>
+    <string name="keywords">Mots-clés</string>
+    <string name="creator">Créateur</string>
+    <string name="privacy_deep_clean">Nettoyage en profondeur de la confidentialité</string>
+    <string name="privacy_deep_clean_sub">Effacer toutes les métadonnées disponibles pour ce document</string>
 </resources>
