--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN गिरावट के लिए अनुकूलित Swin2SR ट्रांसफार्मर का उपयोग करके निम्न-गुणवत्ता वाली छवियों को पुनर्स्थापित करता है। भारी संपीड़न कलाकृतियों को ठीक करने और 4x पैमाने पर विवरण बढ़ाने के लिए बढ़िया।</string>
     <string name="model_bsrgan_swinir_m_x4_gan">बीएसआरजीएएन गिरावट पर प्रशिक्षित स्विनआईआर ट्रांसफार्मर के साथ 4x अपस्केलिंग। फ़ोटो और जटिल दृश्यों में तेज़ बनावट और अधिक प्राकृतिक विवरण के लिए GAN का उपयोग करता है।</string>
     <string name="path">पथ</string>
+    <string name="merge_pdf">पीडीएफ मर्ज करें</string>
+    <string name="merge_pdf_sub">एकाधिक पीडीएफ फाइलों को एक दस्तावेज़ में संयोजित करें</string>
+    <string name="files_order">फ़ाइलें आदेश</string>
+    <string name="pages_short">पीपी.</string>
+    <string name="split_pdf">पीडीएफ को विभाजित करें</string>
+    <string name="split_pdf_sub">पीडीएफ दस्तावेज़ से विशिष्ट पृष्ठ निकालें</string>
+    <string name="rotate_pdf">पीडीएफ घुमाएँ</string>
+    <string name="rotate_pdf_sub">पेज ओरिएंटेशन को स्थायी रूप से ठीक करें</string>
+    <string name="pages">पृष्ठों</string>
+    <string name="rearrange_pdf">पीडीएफ को पुनर्व्यवस्थित करें</string>
+    <string name="rearrange_pdf_sub">पृष्ठों को पुनः व्यवस्थित करने के लिए उन्हें खींचें और छोड़ें</string>
+    <string name="hold_drag_drop">पेजों को पकड़ें और खींचें</string>
+    <string name="page_numbers">पेज नंबर</string>
+    <string name="page_numbers_sub">अपने दस्तावेज़ों में स्वचालित रूप से क्रमांकन जोड़ें</string>
+    <string name="label_format">लेबल प्रारूप</string>
+    <string name="pdf_to_text">पीडीएफ से टेक्स्ट (ओसीआर)</string>
+    <string name="pdf_to_text_sub">अपने पीडीएफ दस्तावेजों से सादा पाठ निकालें</string>
+    <string name="watermark_pdf_sub">ब्रांडिंग या सुरक्षा के लिए कस्टम टेक्स्ट को ओवरले करें</string>
+    <string name="signature">हस्ताक्षर</string>
+    <string name="signature_sub">किसी भी दस्तावेज़ में अपना इलेक्ट्रॉनिक हस्ताक्षर जोड़ें</string>
+    <string name="will_be_for_signature">इसका उपयोग हस्ताक्षर के रूप में किया जाएगा</string>
+    <string name="unlock_pdf">पीडीएफ अनलॉक करें</string>
+    <string name="unlock_pdf_sub">अपनी सुरक्षित फ़ाइलों से पासवर्ड हटाएँ</string>
+    <string name="protect_pdf">पीडीएफ को सुरक्षित रखें</string>
+    <string name="protect_pdf_sub">अपने दस्तावेज़ों को मजबूत एन्क्रिप्शन के साथ सुरक्षित करें</string>
+    <string name="success">सफलता</string>
+    <string name="pdf_unlocked">पीडीएफ अनलॉक हो गया है, आप इसे सहेज सकते हैं या साझा कर सकते हैं</string>
+    <string name="repair_pdf">पीडीएफ की मरम्मत करें</string>
+    <string name="repair_pdf_sub">दूषित या अपठनीय दस्तावेज़ों को ठीक करने का प्रयास करें</string>
+    <string name="grayscale">स्केल</string>
+    <string name="grayscale_pdf_sub">सभी दस्तावेज़ एम्बेडेड छवियों को ग्रेस्केल में बदलें</string>
+    <string name="compress_pdf">पीडीएफ को कंप्रेस करें</string>
+    <string name="compress_pdf_sub">आसान साझाकरण के लिए अपने दस्तावेज़ फ़ाइल आकार को अनुकूलित करें</string>
+    <string name="repair_info">ImageToolbox आंतरिक क्रॉस-रेफरेंस तालिका का पुनर्निर्माण करता है और फ़ाइल संरचना को स्क्रैच से पुनर्जीवित करता है। यह कई फ़ाइलों तक पहुंच बहाल कर सकता है जिन्हें \"खोला नहीं जा सकता\"</string>
+    <string name="grayscale_info">यह टूल सभी दस्तावेज़ छवियों को ग्रेस्केल में परिवर्तित करता है। मुद्रण और फ़ाइल आकार को कम करने के लिए सर्वोत्तम</string>
+    <string name="metadata">मेटाडाटा</string>
+    <string name="metadata_pdf_sub">बेहतर गोपनीयता के लिए दस्तावेज़ गुणों को संपादित करें</string>
+    <string name="tags">टैग</string>
+    <string name="producer">निर्माता</string>
+    <string name="author">लेखक</string>
+    <string name="keywords">कीवर्ड</string>
+    <string name="creator">निर्माता</string>
+    <string name="privacy_deep_clean">प्राइवेसी डीप क्लीन</string>
+    <string name="privacy_deep_clean_sub">इस दस्तावेज़ के लिए सभी उपलब्ध मेटाडेटा साफ़ करें</string>
 </resources>
