--- a/core/resources/src/main/res/values-hu/strings.xml
+++ b/core/resources/src/main/res/values-hu/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Az alacsony minőségű képeket visszaállítja a Swin2SR transzformátor segítségével, amely a BSRGAN leromlására van optimalizálva. Kiválóan alkalmas erős tömörítési műtermékek rögzítésére és 4-szeres léptékű részletek javítására.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x-es felskálázás a BSRGAN degradációra kiképzett SwinIR transzformátorral. GAN-t használ az élesebb textúrák és a természetesebb részletek érdekében a fényképeken és az összetett jeleneteken.</string>
     <string name="path">Útvonal</string>
+    <string name="merge_pdf">PDF egyesítése</string>
+    <string name="merge_pdf_sub">Több PDF fájl egyesítése egyetlen dokumentumban</string>
+    <string name="files_order">Fájlok sorrendje</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">PDF felosztása</string>
+    <string name="split_pdf_sub">Konkrét oldalak kibontása a PDF-dokumentumból</string>
+    <string name="rotate_pdf">PDF forgatása</string>
+    <string name="rotate_pdf_sub">Állandóan javítsa az oldal tájolását</string>
+    <string name="pages">Oldalak</string>
+    <string name="rearrange_pdf">PDF átrendezése</string>
+    <string name="rearrange_pdf_sub">Az oldalak átrendezéséhez húzza át őket</string>
+    <string name="hold_drag_drop">Tartsa és húzza az oldalakat</string>
+    <string name="page_numbers">Oldalszámok</string>
+    <string name="page_numbers_sub">Automatikusan adja hozzá a számozást a dokumentumokhoz</string>
+    <string name="label_format">Címke formátum</string>
+    <string name="pdf_to_text">PDF szöveggé (OCR)</string>
+    <string name="pdf_to_text_sub">Egyszerű szöveg kinyerése PDF-dokumentumaiból</string>
+    <string name="watermark_pdf_sub">Egyéni fedvényszöveg márkaépítéshez vagy biztonsághoz</string>
+    <string name="signature">Aláírás</string>
+    <string name="signature_sub">Adja hozzá elektronikus aláírását bármely dokumentumhoz</string>
+    <string name="will_be_for_signature">Ezt aláírásként fogják használni</string>
+    <string name="unlock_pdf">PDF feloldása</string>
+    <string name="unlock_pdf_sub">Távolítsa el a jelszavakat a védett fájljaiból</string>
+    <string name="protect_pdf">PDF védelme</string>
+    <string name="protect_pdf_sub">Biztosítsa dokumentumait erős titkosítással</string>
+    <string name="success">Siker</string>
+    <string name="pdf_unlocked">PDF feloldva, mentheti vagy megoszthatja</string>
+    <string name="repair_pdf">PDF javítása</string>
+    <string name="repair_pdf_sub">Próbálja meg kijavítani a sérült vagy olvashatatlan dokumentumokat</string>
+    <string name="grayscale">Szürkeárnyalatos</string>
+    <string name="grayscale_pdf_sub">Konvertálja az összes dokumentumba ágyazott képet szürkeárnyalatossá</string>
+    <string name="compress_pdf">PDF tömörítése</string>
+    <string name="compress_pdf_sub">Optimalizálja a dokumentumfájl méretét a könnyebb megosztás érdekében</string>
+    <string name="repair_info">Az ImageToolbox újraépíti a belső kereszthivatkozási táblát, és a semmiből regenerálja a fájlstruktúrát. Ezzel visszaállíthatja a hozzáférést számos olyan fájlhoz, amelyeket \\"nem lehet megnyitni\\"</string>
+    <string name="grayscale_info">Ez az eszköz az összes dokumentumképet szürkeárnyalatossá alakítja. A legjobb a nyomtatáshoz és a fájlméret csökkentéséhez</string>
+    <string name="metadata">Metaadatok</string>
+    <string name="metadata_pdf_sub">Szerkessze a dokumentum tulajdonságait a jobb adatvédelem érdekében</string>
+    <string name="tags">Címkék</string>
+    <string name="producer">Termelő</string>
+    <string name="author">Szerző</string>
+    <string name="keywords">Kulcsszavak</string>
+    <string name="creator">Teremtő</string>
+    <string name="privacy_deep_clean">Adatvédelem Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Törölje a dokumentum összes elérhető metaadatát</string>
 </resources>
