--- a/core/resources/src/main/res/values-in/strings.xml
+++ b/core/resources/src/main/res/values-in/strings.xml
@@ -2108,4 +2108,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Mengembalikan gambar berkualitas rendah menggunakan transformator Swin2SR, dioptimalkan untuk degradasi BSRGAN. Sangat bagus untuk memperbaiki artefak kompresi berat dan meningkatkan detail pada skala 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Peningkatan 4x dengan transformator SwinIR yang dilatih tentang degradasi BSRGAN. Menggunakan GAN untuk tekstur yang lebih tajam dan detail yang lebih alami dalam foto dan pemandangan yang kompleks.</string>
     <string name="path">Jalur</string>
+    <string name="merge_pdf">Gabungkan PDF</string>
+    <string name="merge_pdf_sub">Gabungkan beberapa file PDF menjadi satu dokumen</string>
+    <string name="files_order">Urutan File</string>
+    <string name="pages_short">hal.</string>
+    <string name="split_pdf">Pisahkan PDF</string>
+    <string name="split_pdf_sub">Ekstrak halaman tertentu dari dokumen PDF</string>
+    <string name="rotate_pdf">Putar PDF</string>
+    <string name="rotate_pdf_sub">Perbaiki orientasi halaman secara permanen</string>
+    <string name="pages">Halaman</string>
+    <string name="rearrange_pdf">Susun ulang PDF</string>
+    <string name="rearrange_pdf_sub">Seret dan lepas halaman untuk menyusun ulang</string>
+    <string name="hold_drag_drop">Tahan &amp;amp; Seret halaman</string>
+    <string name="page_numbers">Nomor Halaman</string>
+    <string name="page_numbers_sub">Tambahkan penomoran ke dokumen Anda secara otomatis</string>
+    <string name="label_format">Format Label</string>
+    <string name="pdf_to_text">PDF ke Teks (OCR)</string>
+    <string name="pdf_to_text_sub">Ekstrak teks biasa dari dokumen PDF Anda</string>
+    <string name="watermark_pdf_sub">Hamparkan teks khusus untuk pencitraan merek atau keamanan</string>
+    <string name="signature">Tanda tangan</string>
+    <string name="signature_sub">Tambahkan tanda tangan elektronik Anda ke dokumen apa pun</string>
+    <string name="will_be_for_signature">Ini akan digunakan sebagai tanda tangan</string>
+    <string name="unlock_pdf">Buka kunci PDF</string>
+    <string name="unlock_pdf_sub">Hapus kata sandi dari file Anda yang dilindungi</string>
+    <string name="protect_pdf">Lindungi PDF</string>
+    <string name="protect_pdf_sub">Amankan dokumen Anda dengan enkripsi yang kuat</string>
+    <string name="success">Kesuksesan</string>
+    <string name="pdf_unlocked">PDF tidak terkunci, Anda dapat menyimpan atau membagikannya</string>
+    <string name="repair_pdf">Perbaiki PDF</string>
+    <string name="repair_pdf_sub">Mencoba memperbaiki dokumen yang rusak atau tidak dapat dibaca</string>
+    <string name="grayscale">Skala abu-abu</string>
+    <string name="grayscale_pdf_sub">Ubah semua gambar yang disematkan pada dokumen menjadi skala abu-abu</string>
+    <string name="compress_pdf">Kompres PDF</string>
+    <string name="compress_pdf_sub">Optimalkan ukuran file dokumen Anda agar lebih mudah dibagikan</string>
+    <string name="repair_info">ImageToolbox membangun kembali tabel referensi silang internal dan membuat ulang struktur file dari awal. Ini dapat memulihkan akses ke banyak file yang \\"tidak dapat dibuka\\"</string>
+    <string name="grayscale_info">Alat ini mengubah semua gambar dokumen menjadi skala abu-abu. Terbaik untuk mencetak dan mengurangi ukuran file</string>
+    <string name="metadata">Metadata</string>
+    <string name="metadata_pdf_sub">Edit properti dokumen untuk privasi yang lebih baik</string>
+    <string name="tags">Tag</string>
+    <string name="producer">Produsen</string>
+    <string name="author">Pengarang</string>
+    <string name="keywords">Kata kunci</string>
+    <string name="creator">Pencipta</string>
+    <string name="privacy_deep_clean">Privasi Sangat Bersih</string>
+    <string name="privacy_deep_clean_sub">Hapus semua metadata yang tersedia untuk dokumen ini</string>
 </resources>
