--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Ripristina immagini di bassa qualità utilizzando il trasformatore Swin2SR, ottimizzato per il degrado BSRGAN. Ottimo per correggere artefatti da compressione pesante e migliorare i dettagli su scala 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Upscaling 4x con trasformatore SwinIR addestrato sulla degradazione BSRGAN. Utilizza GAN per texture più nitide e dettagli più naturali in foto e scene complesse.</string>
     <string name="path">Sentiero</string>
+    <string name="merge_pdf">Unisci PDF</string>
+    <string name="merge_pdf_sub">Combina più file PDF in un unico documento</string>
+    <string name="files_order">Ordine dei file</string>
+    <string name="pages_short">pag.</string>
+    <string name="split_pdf">PDF diviso</string>
+    <string name="split_pdf_sub">Estrai pagine specifiche dal documento PDF</string>
+    <string name="rotate_pdf">Ruota PDF</string>
+    <string name="rotate_pdf_sub">Correggi l\'orientamento della pagina in modo permanente</string>
+    <string name="pages">Pagine</string>
+    <string name="rearrange_pdf">Riorganizzare il PDF</string>
+    <string name="rearrange_pdf_sub">Trascina e rilascia le pagine per riordinarle</string>
+    <string name="hold_drag_drop">Tieni premuto e trascina le pagine</string>
+    <string name="page_numbers">Numeri di pagina</string>
+    <string name="page_numbers_sub">Aggiungi automaticamente la numerazione ai tuoi documenti</string>
+    <string name="label_format">Formato etichetta</string>
+    <string name="pdf_to_text">Da PDF a testo (OCR)</string>
+    <string name="pdf_to_text_sub">Estrai testo semplice dai tuoi documenti PDF</string>
+    <string name="watermark_pdf_sub">Sovrapponi testo personalizzato per il branding o la sicurezza</string>
+    <string name="signature">Firma</string>
+    <string name="signature_sub">Aggiungi la tua firma elettronica a qualsiasi documento</string>
+    <string name="will_be_for_signature">Questo verrà utilizzato come firma</string>
+    <string name="unlock_pdf">Sblocca PDF</string>
+    <string name="unlock_pdf_sub">Rimuovi le password dai tuoi file protetti</string>
+    <string name="protect_pdf">Proteggi PDF</string>
+    <string name="protect_pdf_sub">Proteggi i tuoi documenti con una crittografia avanzata</string>
+    <string name="success">Successo</string>
+    <string name="pdf_unlocked">PDF sbloccato, puoi salvarlo o condividerlo</string>
+    <string name="repair_pdf">Ripara PDF</string>
+    <string name="repair_pdf_sub">Tentare di correggere documenti danneggiati o illeggibili</string>
+    <string name="grayscale">Scala di grigi</string>
+    <string name="grayscale_pdf_sub">Converti tutte le immagini incorporate nel documento in scala di grigi</string>
+    <string name="compress_pdf">Comprimi PDF</string>
+    <string name="compress_pdf_sub">Ottimizza le dimensioni del file del tuo documento per una condivisione più semplice</string>
+    <string name="repair_info">ImageToolbox ricostruisce la tabella dei riferimenti incrociati interna e rigenera la struttura dei file da zero. Ciò può ripristinare l\'accesso a molti file che \\"non possono essere aperti\\"</string>
+    <string name="grayscale_info">Questo strumento converte tutte le immagini del documento in scala di grigi. Ideale per stampare e ridurre le dimensioni del file</string>
+    <string name="metadata">Metadati</string>
+    <string name="metadata_pdf_sub">Modifica le proprietà del documento per una migliore privacy</string>
+    <string name="tags">Tag</string>
+    <string name="producer">Produttore</string>
+    <string name="author">Autore</string>
+    <string name="keywords">Parole chiave</string>
+    <string name="creator">Creatore</string>
+    <string name="privacy_deep_clean">Privacy Pulizia profonda</string>
+    <string name="privacy_deep_clean_sub">Cancella tutti i metadati disponibili per questo documento</string>
 </resources>
