--- a/core/resources/src/main/res/values-iw/strings.xml
+++ b/core/resources/src/main/res/values-iw/strings.xml
@@ -2111,4 +2111,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">משחזר תמונות באיכות נמוכה באמצעות שנאי Swin2SR, מותאם לפירוק BSRGAN. נהדר לתיקון חפצי דחיסה כבדים ושיפור פרטים בקנה מידה פי 4.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">העלאת קנה מידה פי 4 עם שנאי SwinIR מאומן על השפלה של BSRGAN. משתמש ב-GAN למרקמים חדים יותר ופרטים טבעיים יותר בתמונות ובסצנות מורכבות.</string>
     <string name="path">נָתִיב</string>
+    <string name="merge_pdf">מיזוג PDF</string>
+    <string name="merge_pdf_sub">שלב קובצי PDF מרובים למסמך אחד</string>
+    <string name="files_order">סדר קבצים</string>
+    <string name="pages_short">עמ.</string>
+    <string name="split_pdf">פיצול PDF</string>
+    <string name="split_pdf_sub">חלץ דפים ספציפיים ממסמך PDF</string>
+    <string name="rotate_pdf">סובב PDF</string>
+    <string name="rotate_pdf_sub">תקן את כיוון העמוד לצמיתות</string>
+    <string name="pages">דפים</string>
+    <string name="rearrange_pdf">סידור מחדש של PDF</string>
+    <string name="rearrange_pdf_sub">גרור ושחרר דפים כדי לסדר אותם מחדש</string>
+    <string name="hold_drag_drop">החזק וגרור דפים</string>
+    <string name="page_numbers">מספרי עמודים</string>
+    <string name="page_numbers_sub">הוסף מספור למסמכים שלך באופן אוטומטי</string>
+    <string name="label_format">פורמט תווית</string>
+    <string name="pdf_to_text">PDF לטקסט (OCR)</string>
+    <string name="pdf_to_text_sub">חלץ טקסט רגיל ממסמכי ה-PDF שלך</string>
+    <string name="watermark_pdf_sub">כיסוי טקסט מותאם אישית למיתוג או אבטחה</string>
+    <string name="signature">חֲתִימָה</string>
+    <string name="signature_sub">הוסף את החתימה האלקטרונית שלך לכל מסמך</string>
+    <string name="will_be_for_signature">זה ישמש כחתימה</string>
+    <string name="unlock_pdf">ביטול נעילת PDF</string>
+    <string name="unlock_pdf_sub">הסר סיסמאות מהקבצים המוגנים שלך</string>
+    <string name="protect_pdf">הגן על PDF</string>
+    <string name="protect_pdf_sub">אבטח את המסמכים שלך עם הצפנה חזקה</string>
+    <string name="success">הַצלָחָה</string>
+    <string name="pdf_unlocked">PDF לא נעול, אתה יכול לשמור או לשתף אותו</string>
+    <string name="repair_pdf">תיקון PDF</string>
+    <string name="repair_pdf_sub">ניסיון לתקן מסמכים פגומים או בלתי קריאים</string>
+    <string name="grayscale">גווני אפור</string>
+    <string name="grayscale_pdf_sub">המר את כל התמונות המוטבעות במסמכים לגווני אפור</string>
+    <string name="compress_pdf">דחוס PDF</string>
+    <string name="compress_pdf_sub">בצע אופטימיזציה של גודל קובץ המסמך שלך לשיתוף קל יותר</string>
+    <string name="repair_info">ImageToolbox בונה מחדש את טבלת ההפניות הפנימית ומחדשת את מבנה הקובץ מאפס. זה יכול לשחזר גישה לקבצים רבים ש\\"לא ניתן לפתוח\\"</string>
+    <string name="grayscale_info">כלי זה ממיר את כל תמונות המסמכים לגווני אפור. הטוב ביותר להדפסה ולהקטנת גודל הקובץ</string>
+    <string name="metadata">מטא נתונים</string>
+    <string name="metadata_pdf_sub">ערוך מאפייני מסמך לפרטיות טובה יותר</string>
+    <string name="tags">תגים</string>
+    <string name="producer">יַצרָן</string>
+    <string name="author">מְחַבֵּר</string>
+    <string name="keywords">מילות מפתח</string>
+    <string name="creator">יוֹצֵר</string>
+    <string name="privacy_deep_clean">פרטיות ניקוי עמוק</string>
+    <string name="privacy_deep_clean_sub">נקה את כל המטא נתונים הזמינים עבור מסמך זה</string>
 </resources>
