--- a/core/resources/src/main/res/values-ja/strings.xml
+++ b/core/resources/src/main/res/values-ja/strings.xml
@@ -2108,4 +2108,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN の劣化に対して最適化された Swin2SR トランスフォーマーを使用して低品質の画像を復元します。重度の圧縮アーティファクトを修正し、4 倍スケールで細部を強調するのに最適です。</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN 劣化でトレーニングされた SwinIR トランスフォーマーによる 4 倍のアップスケーリング。 GAN を使用して、写真や複雑なシーンのより鮮明なテクスチャとより自然なディテールを実現します。</string>
     <string name="path">パス</string>
+    <string name="merge_pdf">PDFを結合</string>
+    <string name="merge_pdf_sub">複数の PDF ファイルを 1 つのドキュメントに結合する</string>
+    <string name="files_order">ファイルの順序</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">PDFの分割</string>
+    <string name="split_pdf_sub">PDFドキュメントから特定のページを抽出</string>
+    <string name="rotate_pdf">PDFを回転する</string>
+    <string name="rotate_pdf_sub">ページの向きを永続的に修正する</string>
+    <string name="pages">ページ</string>
+    <string name="rearrange_pdf">PDF を並べ替える</string>
+    <string name="rearrange_pdf_sub">ページをドラッグ アンド ドロップして順序を変更します</string>
+    <string name="hold_drag_drop">ページを押したままドラッグ</string>
+    <string name="page_numbers">ページ番号</string>
+    <string name="page_numbers_sub">文書に番号を自動的に追加する</string>
+    <string name="label_format">ラベルフォーマット</string>
+    <string name="pdf_to_text">PDF からテキストへ (OCR)</string>
+    <string name="pdf_to_text_sub">PDF ドキュメントからプレーンテキストを抽出する</string>
+    <string name="watermark_pdf_sub">ブランドまたはセキュリティのためのオーバーレイカスタムテキスト</string>
+    <string name="signature">サイン</string>
+    <string name="signature_sub">あらゆる文書に電子署名を追加します</string>
+    <string name="will_be_for_signature">これは署名として使用されます</string>
+    <string name="unlock_pdf">PDFのロックを解除する</string>
+    <string name="unlock_pdf_sub">保護されたファイルからパスワードを削除する</string>
+    <string name="protect_pdf">PDFを保護する</string>
+    <string name="protect_pdf_sub">強力な暗号化でドキュメントを保護する</string>
+    <string name="success">成功</string>
+    <string name="pdf_unlocked">PDF のロックが解除され、保存または共有できます</string>
+    <string name="repair_pdf">PDFを修復する</string>
+    <string name="repair_pdf_sub">破損した文書または判読不能な文書を修復してみます</string>
+    <string name="grayscale">グレースケール</string>
+    <string name="grayscale_pdf_sub">すべてのドキュメントに埋め込まれた画像をグレースケールに変換します</string>
+    <string name="compress_pdf">PDFを圧縮する</string>
+    <string name="compress_pdf_sub">ドキュメントのファイル サイズを最適化して共有しやすくします</string>
+    <string name="repair_info">ImageToolbox は内部相互参照テーブルを再構築し、ファイル構造を最初から再生成します。これにより、「開けない」多くのファイルへのアクセスを復元できます。</string>
+    <string name="grayscale_info">このツールはすべての文書画像をグレースケールに変換します。印刷やファイルサイズの縮小に最適</string>
+    <string name="metadata">メタデータ</string>
+    <string name="metadata_pdf_sub">プライバシーを向上させるためにドキュメントのプロパティを編集する</string>
+    <string name="tags">タグ</string>
+    <string name="producer">プロデューサー</string>
+    <string name="author">著者</string>
+    <string name="keywords">キーワード</string>
+    <string name="creator">クリエイター</string>
+    <string name="privacy_deep_clean">プライバシーのディープクリーン</string>
+    <string name="privacy_deep_clean_sub">このドキュメントの利用可能なメタデータをすべてクリアします</string>
 </resources>
