--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN деградациясы үшін оңтайландырылған Swin2SR трансформаторын пайдаланып сапасыз кескіндерді қалпына келтіреді. Ауыр қысу артефактілерін бекіту және 4x масштабындағы мәліметтерді жақсарту үшін тамаша.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN деградациясына үйретілген SwinIR трансформаторымен 4 есе кеңейту. Фотосуреттер мен күрделі көріністердегі анық текстуралар мен табиғи бөлшектер үшін GAN пайдаланады.</string>
     <string name="path">Жол</string>
+    <string name="merge_pdf">PDF біріктіру</string>
+    <string name="merge_pdf_sub">Бірнеше PDF файлдарын бір құжатқа біріктіріңіз</string>
+    <string name="files_order">Файлдар тәртібі</string>
+    <string name="pages_short">бет.</string>
+    <string name="split_pdf">PDF бөлу</string>
+    <string name="split_pdf_sub">PDF құжатынан арнайы беттерді шығарып алыңыз</string>
+    <string name="rotate_pdf">PDF файлын бұру</string>
+    <string name="rotate_pdf_sub">Бет бағытын біржола түзетіңіз</string>
+    <string name="pages">Беттер</string>
+    <string name="rearrange_pdf">PDF файлын қайта реттеңіз</string>
+    <string name="rearrange_pdf_sub">Беттерді ретін өзгерту үшін сүйреп апарыңыз</string>
+    <string name="hold_drag_drop">Беттерді ұстап тұрыңыз және сүйреңіз</string>
+    <string name="page_numbers">Бет нөмірлері</string>
+    <string name="page_numbers_sub">Құжаттарыңызға нөмірлеуді автоматты түрде қосыңыз</string>
+    <string name="label_format">Белгі пішімі</string>
+    <string name="pdf_to_text">PDF-мәтінге (OCR)</string>
+    <string name="pdf_to_text_sub">PDF құжаттарынан кәдімгі мәтінді шығарып алыңыз</string>
+    <string name="watermark_pdf_sub">Брендинг немесе қауіпсіздік үшін реттелетін мәтінді қабаттастырыңыз</string>
+    <string name="signature">Қол қою</string>
+    <string name="signature_sub">Кез келген құжатқа электрондық қолтаңбаңызды қосыңыз</string>
+    <string name="will_be_for_signature">Бұл қолтаңба ретінде пайдаланылады</string>
+    <string name="unlock_pdf">PDF құлпын ашу</string>
+    <string name="unlock_pdf_sub">Құпия сөздерді қорғалған файлдардан жойыңыз</string>
+    <string name="protect_pdf">PDF файлын қорғаңыз</string>
+    <string name="protect_pdf_sub">Құжаттарды күшті шифрлау арқылы қорғаңыз</string>
+    <string name="success">Сәттілік</string>
+    <string name="pdf_unlocked">PDF құлпы ашылды, оны сақтауға немесе бөлісуге болады</string>
+    <string name="repair_pdf">PDF жөндеу</string>
+    <string name="repair_pdf_sub">Бүлінген немесе оқылмайтын құжаттарды түзету әрекеті</string>
+    <string name="grayscale">Сұр реңк</string>
+    <string name="grayscale_pdf_sub">Барлық ендірілген құжат кескіндерін сұр реңкке түрлендіріңіз</string>
+    <string name="compress_pdf">PDF файлын қысыңыз</string>
+    <string name="compress_pdf_sub">Бөлісуді жеңілдету үшін құжат файлының өлшемін оңтайландырыңыз</string>
+    <string name="repair_info">ImageToolbox ішкі айқас сілтеме кестесін қайта құрады және файл құрылымын нөлден бастап қайта жасайды. Бұл \\"ашу мүмкін емес\\" көптеген файлдарға кіру рұқсатын қалпына келтіре алады.</string>
+    <string name="grayscale_info">Бұл құрал барлық құжат кескіндерін сұр реңкке түрлендіреді. Басып шығару және файл өлшемін азайту үшін ең жақсы</string>
+    <string name="metadata">Метадеректер</string>
+    <string name="metadata_pdf_sub">Құпиялықты жақсарту үшін құжат сипаттарын өңдеңіз</string>
+    <string name="tags">Тегтер</string>
+    <string name="producer">Продюсер</string>
+    <string name="author">Автор</string>
+    <string name="keywords">Негізгі сөздер</string>
+    <string name="creator">Жаратушы</string>
+    <string name="privacy_deep_clean">Құпиялылық Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Осы құжат үшін барлық қолжетімді метадеректерді өшіріңіз</string>
 </resources>
