--- a/core/resources/src/main/res/values-ko/strings.xml
+++ b/core/resources/src/main/res/values-ko/strings.xml
@@ -2108,4 +2108,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN 저하에 최적화된 Swin2SR 변환기를 사용하여 저품질 이미지를 복원합니다. 과도한 압축 아티팩트를 수정하고 4배율로 디테일을 향상시키는 데 적합합니다.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN 저하에 대해 훈련된 SwinIR 변환기를 사용한 4배 업스케일링. 사진과 복잡한 장면에서 더 선명한 질감과 더 자연스러운 디테일을 위해 GAN을 사용합니다.</string>
     <string name="path">길</string>
+    <string name="merge_pdf">PDF 병합</string>
+    <string name="merge_pdf_sub">여러 PDF 파일을 하나의 문서로 결합</string>
+    <string name="files_order">파일 순서</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">PDF 분할</string>
+    <string name="split_pdf_sub">PDF 문서에서 특정 페이지 추출</string>
+    <string name="rotate_pdf">PDF 회전</string>
+    <string name="rotate_pdf_sub">페이지 방향을 영구적으로 수정</string>
+    <string name="pages">페이지</string>
+    <string name="rearrange_pdf">PDF 재정렬</string>
+    <string name="rearrange_pdf_sub">페이지를 드래그 앤 드롭하여 재정렬하세요.</string>
+    <string name="hold_drag_drop">페이지 유지 및 드래그</string>
+    <string name="page_numbers">페이지 번호</string>
+    <string name="page_numbers_sub">문서에 자동으로 번호 매기기 추가</string>
+    <string name="label_format">라벨 형식</string>
+    <string name="pdf_to_text">PDF를 텍스트로(OCR)</string>
+    <string name="pdf_to_text_sub">PDF 문서에서 일반 텍스트 추출</string>
+    <string name="watermark_pdf_sub">브랜딩 또는 보안을 위한 오버레이 사용자 정의 텍스트</string>
+    <string name="signature">서명</string>
+    <string name="signature_sub">모든 문서에 전자 서명을 추가하세요</string>
+    <string name="will_be_for_signature">서명으로 사용됩니다.</string>
+    <string name="unlock_pdf">PDF 잠금해제</string>
+    <string name="unlock_pdf_sub">보호된 파일에서 비밀번호를 제거하세요</string>
+    <string name="protect_pdf">PDF 보호</string>
+    <string name="protect_pdf_sub">강력한 암호화로 문서를 보호하세요</string>
+    <string name="success">성공</string>
+    <string name="pdf_unlocked">PDF가 잠금 해제되었습니다. 저장하거나 공유할 수 있습니다.</string>
+    <string name="repair_pdf">PDF 복구</string>
+    <string name="repair_pdf_sub">손상되었거나 읽을 수 없는 문서를 수정하려고 시도합니다.</string>
+    <string name="grayscale">그레이스케일</string>
+    <string name="grayscale_pdf_sub">문서에 포함된 모든 이미지를 회색조로 변환</string>
+    <string name="compress_pdf">PDF 압축</string>
+    <string name="compress_pdf_sub">더 쉽게 공유할 수 있도록 문서 파일 크기를 최적화하세요.</string>
+    <string name="repair_info">ImageToolbox는 내부 상호 참조 테이블을 다시 작성하고 파일 구조를 처음부터 다시 생성합니다. 이렇게 하면 \\"열 수 없는\\" 많은 파일에 대한 액세스를 복원할 수 있습니다.</string>
+    <string name="grayscale_info">이 도구는 모든 문서 이미지를 회색조로 변환합니다. 인쇄 및 파일 크기 축소에 가장 적합</string>
+    <string name="metadata">메타데이터</string>
+    <string name="metadata_pdf_sub">더 나은 개인 정보 보호를 위해 문서 속성 편집</string>
+    <string name="tags">태그</string>
+    <string name="producer">생산자</string>
+    <string name="author">작가</string>
+    <string name="keywords">키워드</string>
+    <string name="creator">창조자</string>
+    <string name="privacy_deep_clean">개인 정보 보호 딥 클린</string>
+    <string name="privacy_deep_clean_sub">이 문서에 사용 가능한 모든 메타데이터 지우기</string>
 </resources>
