--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2112,4 +2112,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Atkuria žemos kokybės vaizdus naudojant Swin2SR transformatorių, optimizuotą BSRGAN degradacijai. Puikiai tinka tvirtinti stiprius suspaudimo artefaktus ir patobulinti detales 4 kartus.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x padidinimas naudojant SwinIR transformatorių, apmokytą BSRGAN degradacijai. Naudoja GAN, kad nuotraukose ir sudėtingose scenose būtų ryškesnės tekstūros ir natūralesnės detalės.</string>
     <string name="path">Kelias</string>
+    <string name="merge_pdf">Sujungti PDF</string>
+    <string name="merge_pdf_sub">Sujunkite kelis PDF failus į vieną dokumentą</string>
+    <string name="files_order">Failų tvarka</string>
+    <string name="pages_short">p.</string>
+    <string name="split_pdf">Padalinti PDF</string>
+    <string name="split_pdf_sub">Ištraukite konkrečius puslapius iš PDF dokumento</string>
+    <string name="rotate_pdf">Pasukti PDF</string>
+    <string name="rotate_pdf_sub">Pataisykite puslapio orientaciją visam laikui</string>
+    <string name="pages">Puslapiai</string>
+    <string name="rearrange_pdf">Pertvarkyti PDF</string>
+    <string name="rearrange_pdf_sub">Nuvilkite puslapius, kad juos pakeistumėte</string>
+    <string name="hold_drag_drop">Laikykite ir vilkite puslapius</string>
+    <string name="page_numbers">Puslapių numeriai</string>
+    <string name="page_numbers_sub">Automatiškai pridėkite numeraciją prie savo dokumentų</string>
+    <string name="label_format">Etiketės formatas</string>
+    <string name="pdf_to_text">PDF į tekstą (OCR)</string>
+    <string name="pdf_to_text_sub">Ištraukite paprastą tekstą iš savo PDF dokumentų</string>
+    <string name="watermark_pdf_sub">Perdenkite tinkintą tekstą, skirtą prekės ženklui arba saugai</string>
+    <string name="signature">Parašas</string>
+    <string name="signature_sub">Pridėkite savo elektroninį parašą prie bet kurio dokumento</string>
+    <string name="will_be_for_signature">Tai bus naudojama kaip parašas</string>
+    <string name="unlock_pdf">Atrakinti PDF</string>
+    <string name="unlock_pdf_sub">Pašalinkite slaptažodžius iš apsaugotų failų</string>
+    <string name="protect_pdf">Apsaugoti PDF</string>
+    <string name="protect_pdf_sub">Apsaugokite dokumentus naudodami tvirtą šifravimą</string>
+    <string name="success">Sėkmės</string>
+    <string name="pdf_unlocked">PDF atrakintas, galite jį išsaugoti arba bendrinti</string>
+    <string name="repair_pdf">Pataisyti PDF</string>
+    <string name="repair_pdf_sub">Bandykite taisyti sugadintus arba neįskaitomus dokumentus</string>
+    <string name="grayscale">Pilkos spalvos</string>
+    <string name="grayscale_pdf_sub">Konvertuoti visus dokumento įterptus vaizdus į pilkos spalvos tonus</string>
+    <string name="compress_pdf">Suspausti PDF</string>
+    <string name="compress_pdf_sub">Optimizuokite dokumento failo dydį, kad būtų lengviau bendrinti</string>
+    <string name="repair_info">„ImageToolbox“ atkuria vidinę kryžminių nuorodų lentelę ir atkuria failo struktūrą nuo nulio. Tai gali atkurti prieigą prie daugelio failų, kurių \\"negalima atidaryti\\"</string>
+    <string name="grayscale_info">Šis įrankis konvertuoja visus dokumentų vaizdus į pilkos spalvos tonus. Geriausiai tinka spausdinti ir sumažinti failo dydį</string>
+    <string name="metadata">Metaduomenys</string>
+    <string name="metadata_pdf_sub">Redaguokite dokumento ypatybes, kad užtikrintumėte didesnį privatumą</string>
+    <string name="tags">Žymos</string>
+    <string name="producer">Gamintojas</string>
+    <string name="author">Autorius</string>
+    <string name="keywords">Raktažodžiai</string>
+    <string name="creator">Kūrėjas</string>
+    <string name="privacy_deep_clean">Privatumas Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Išvalyti visus galimus šio dokumento metaduomenis</string>
 </resources>
