--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2110,4 +2110,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ट्रान्सफॉर्मर वापरून कमी-गुणवत्तेच्या प्रतिमा पुनर्संचयित करते, BSRGAN डिग्रेडेशनसाठी ऑप्टिमाइझ केलेले. हेवी कॉम्प्रेशन आर्टिफॅक्ट्स निश्चित करण्यासाठी आणि 4x स्केलवर तपशील वाढविण्यासाठी उत्तम.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN डिग्रेडेशनवर प्रशिक्षित स्विनआयआर ट्रान्सफॉर्मरसह 4x अपस्केलिंग. फोटो आणि जटिल दृश्यांमध्ये तीक्ष्ण पोत आणि अधिक नैसर्गिक तपशीलांसाठी GAN वापरते.</string>
     <string name="path">मार्ग</string>
+    <string name="merge_pdf">पीडीएफ मर्ज करा</string>
+    <string name="merge_pdf_sub">एका दस्तऐवजात अनेक पीडीएफ फाइल्स एकत्र करा</string>
+    <string name="files_order">फाईल्स ऑर्डर</string>
+    <string name="pages_short">pp</string>
+    <string name="split_pdf">पीडीएफ विभाजित करा</string>
+    <string name="split_pdf_sub">पीडीएफ दस्तऐवजातून विशिष्ट पृष्ठे काढा</string>
+    <string name="rotate_pdf">पीडीएफ फिरवा</string>
+    <string name="rotate_pdf_sub">पृष्ठ अभिमुखता कायमचे निश्चित करा</string>
+    <string name="pages">पृष्ठे</string>
+    <string name="rearrange_pdf">पीडीएफची पुनर्रचना करा</string>
+    <string name="rearrange_pdf_sub">पृष्ठे पुन्हा क्रमाने लावण्यासाठी ड्रॅग आणि ड्रॉप करा</string>
+    <string name="hold_drag_drop">पृष्ठे धरा आणि ड्रॅग करा</string>
+    <string name="page_numbers">पृष्ठ क्रमांक</string>
+    <string name="page_numbers_sub">तुमच्या दस्तऐवजांमध्ये आपोआप क्रमांकन जोडा</string>
+    <string name="label_format">लेबल स्वरूप</string>
+    <string name="pdf_to_text">PDF टू टेक्स्ट (OCR)</string>
+    <string name="pdf_to_text_sub">तुमच्या PDF दस्तऐवजांमधून साधा मजकूर काढा</string>
+    <string name="watermark_pdf_sub">ब्रँडिंग किंवा सुरक्षिततेसाठी सानुकूल मजकूर आच्छादित करा</string>
+    <string name="signature">स्वाक्षरी</string>
+    <string name="signature_sub">कोणत्याही दस्तऐवजात तुमची इलेक्ट्रॉनिक स्वाक्षरी जोडा</string>
+    <string name="will_be_for_signature">हे स्वाक्षरी म्हणून वापरले जाईल</string>
+    <string name="unlock_pdf">पीडीएफ अनलॉक करा</string>
+    <string name="unlock_pdf_sub">तुमच्या संरक्षित फाइल्समधून पासवर्ड काढा</string>
+    <string name="protect_pdf">पीडीएफ संरक्षित करा</string>
+    <string name="protect_pdf_sub">मजबूत एन्क्रिप्शनसह तुमचे दस्तऐवज सुरक्षित करा</string>
+    <string name="success">यश</string>
+    <string name="pdf_unlocked">पीडीएफ अनलॉक, तुम्ही सेव्ह किंवा शेअर करू शकता</string>
+    <string name="repair_pdf">पीडीएफ दुरुस्त करा</string>
+    <string name="repair_pdf_sub">खराब झालेले किंवा न वाचलेले दस्तऐवज दुरुस्त करण्याचा प्रयत्न</string>
+    <string name="grayscale">ग्रेस्केल</string>
+    <string name="grayscale_pdf_sub">सर्व दस्तऐवज एम्बेड केलेल्या प्रतिमा ग्रेस्केलमध्ये रूपांतरित करा</string>
+    <string name="compress_pdf">पीडीएफ कॉम्प्रेस करा</string>
+    <string name="compress_pdf_sub">सुलभ सामायिकरणासाठी तुमचा दस्तऐवज फाइल आकार ऑप्टिमाइझ करा</string>
+    <string name="repair_info">इमेजटूलबॉक्स अंतर्गत क्रॉस-रेफरन्स टेबलची पुनर्बांधणी करते आणि स्क्रॅचमधून फाइल संरचना पुन्हा निर्माण करते. हे \\"उघडले जाऊ शकत नाही\\" अशा अनेक फाइल्समध्ये प्रवेश पुनर्संचयित करू शकते.</string>
+    <string name="grayscale_info">हे साधन सर्व दस्तऐवज प्रतिमा ग्रेस्केलमध्ये रूपांतरित करते. मुद्रित करण्यासाठी आणि फाइल आकार कमी करण्यासाठी सर्वोत्तम</string>
+    <string name="metadata">मेटाडेटा</string>
+    <string name="metadata_pdf_sub">चांगल्या गोपनीयतेसाठी दस्तऐवज गुणधर्म संपादित करा</string>
+    <string name="tags">टॅग्ज</string>
+    <string name="producer">निर्माता</string>
+    <string name="author">लेखक</string>
+    <string name="keywords">कीवर्ड</string>
+    <string name="creator">निर्माता</string>
+    <string name="privacy_deep_clean">गोपनीयता खोल स्वच्छ</string>
+    <string name="privacy_deep_clean_sub">या दस्तऐवजासाठी सर्व उपलब्ध मेटाडेटा साफ करा</string>
 </resources>
