--- a/core/resources/src/main/res/values-nl/strings.xml
+++ b/core/resources/src/main/res/values-nl/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Herstelt afbeeldingen van lage kwaliteit met behulp van de Swin2SR-transformator, geoptimaliseerd voor BSRGAN-degradatie. Ideaal voor het corrigeren van zware compressieartefacten en het verbeteren van details op 4x schaal.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x opschalen met SwinIR-transformator getraind op BSRGAN-degradatie. Gebruikt GAN voor scherpere texturen en natuurlijkere details in foto\'s en complexe scènes.</string>
     <string name="path">Pad</string>
+    <string name="merge_pdf">PDF samenvoegen</string>
+    <string name="merge_pdf_sub">Combineer meerdere PDF-bestanden in één document</string>
+    <string name="files_order">Bestanden bestellen</string>
+    <string name="pages_short">blz.</string>
+    <string name="split_pdf">PDF splitsen</string>
+    <string name="split_pdf_sub">Extraheer specifieke pagina\'s uit een PDF-document</string>
+    <string name="rotate_pdf">PDF roteren</string>
+    <string name="rotate_pdf_sub">Pagina-oriëntatie permanent corrigeren</string>
+    <string name="pages">Pagina\'s</string>
+    <string name="rearrange_pdf">PDF opnieuw rangschikken</string>
+    <string name="rearrange_pdf_sub">Versleep pagina\'s om ze opnieuw te ordenen</string>
+    <string name="hold_drag_drop">Pagina\'s vasthouden en slepen</string>
+    <string name="page_numbers">Paginanummers</string>
+    <string name="page_numbers_sub">Voeg automatisch nummering toe aan uw documenten</string>
+    <string name="label_format">Labelformaat</string>
+    <string name="pdf_to_text">PDF naar tekst (OCR)</string>
+    <string name="pdf_to_text_sub">Extraheer platte tekst uit uw PDF-documenten</string>
+    <string name="watermark_pdf_sub">Overlay met aangepaste tekst voor branding of beveiliging</string>
+    <string name="signature">Handtekening</string>
+    <string name="signature_sub">Voeg uw elektronische handtekening toe aan elk document</string>
+    <string name="will_be_for_signature">Deze wordt gebruikt als handtekening</string>
+    <string name="unlock_pdf">Ontgrendel PDF</string>
+    <string name="unlock_pdf_sub">Verwijder wachtwoorden uit uw beveiligde bestanden</string>
+    <string name="protect_pdf">Bescherm PDF</string>
+    <string name="protect_pdf_sub">Beveilig uw documenten met sterke encryptie</string>
+    <string name="success">Succes</string>
+    <string name="pdf_unlocked">PDF ontgrendeld, u kunt het opslaan of delen</string>
+    <string name="repair_pdf">PDF repareren</string>
+    <string name="repair_pdf_sub">Probeer beschadigde of onleesbare documenten te repareren</string>
+    <string name="grayscale">Grijstinten</string>
+    <string name="grayscale_pdf_sub">Converteer alle in het document ingebedde afbeeldingen naar grijswaarden</string>
+    <string name="compress_pdf">PDF comprimeren</string>
+    <string name="compress_pdf_sub">Optimaliseer de bestandsgrootte van uw document om gemakkelijker te kunnen delen</string>
+    <string name="repair_info">ImageToolbox bouwt de interne kruisverwijzingstabel opnieuw op en genereert de bestandsstructuur helemaal opnieuw. Hierdoor kan de toegang tot veel bestanden worden hersteld die \\"niet kunnen worden geopend\\"</string>
+    <string name="grayscale_info">Deze tool converteert alle documentafbeeldingen naar grijswaarden. Beste voor afdrukken en verkleinen van de bestandsgrootte</string>
+    <string name="metadata">Metagegevens</string>
+    <string name="metadata_pdf_sub">Bewerk documenteigenschappen voor betere privacy</string>
+    <string name="tags">Labels</string>
+    <string name="producer">Producent</string>
+    <string name="author">Auteur</string>
+    <string name="keywords">Trefwoorden</string>
+    <string name="creator">Schepper</string>
+    <string name="privacy_deep_clean">Privacy Diep schoon</string>
+    <string name="privacy_deep_clean_sub">Wis alle beschikbare metagegevens voor dit document</string>
 </resources>
