--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN ਡਿਗਰੇਡੇਸ਼ਨ ਲਈ ਅਨੁਕੂਲਿਤ, Swin2SR ਟ੍ਰਾਂਸਫਾਰਮਰ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਹੋਏ ਘੱਟ-ਗੁਣਵੱਤਾ ਵਾਲੀਆਂ ਤਸਵੀਰਾਂ ਨੂੰ ਰੀਸਟੋਰ ਕਰਦਾ ਹੈ। ਭਾਰੀ ਸੰਕੁਚਨ ਕਲਾਤਮਕ ਚੀਜ਼ਾਂ ਨੂੰ ਫਿਕਸ ਕਰਨ ਅਤੇ 4x ਸਕੇਲ \'ਤੇ ਵੇਰਵਿਆਂ ਨੂੰ ਵਧਾਉਣ ਲਈ ਵਧੀਆ।</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN ਡਿਗਰੇਡੇਸ਼ਨ \'ਤੇ ਸਿਖਲਾਈ ਪ੍ਰਾਪਤ ਸਵਿਨਆਈਆਰ ਟ੍ਰਾਂਸਫਾਰਮਰ ਨਾਲ 4x ਅਪਸਕੇਲਿੰਗ। ਫੋਟੋਆਂ ਅਤੇ ਗੁੰਝਲਦਾਰ ਦ੍ਰਿਸ਼ਾਂ ਵਿੱਚ ਤਿੱਖੇ ਟੈਕਸਟ ਅਤੇ ਹੋਰ ਕੁਦਰਤੀ ਵੇਰਵਿਆਂ ਲਈ GAN ਦੀ ਵਰਤੋਂ ਕਰਦਾ ਹੈ।</string>
     <string name="path">ਮਾਰਗ</string>
+    <string name="merge_pdf">PDF ਨੂੰ ਮਿਲਾਓ</string>
+    <string name="merge_pdf_sub">ਇੱਕ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਕਈ PDF ਫਾਈਲਾਂ ਨੂੰ ਜੋੜੋ</string>
+    <string name="files_order">ਫਾਈਲਾਂ ਦਾ ਆਰਡਰ</string>
+    <string name="pages_short">pp</string>
+    <string name="split_pdf">PDF ਵੰਡੋ</string>
+    <string name="split_pdf_sub">PDF ਦਸਤਾਵੇਜ਼ ਤੋਂ ਖਾਸ ਪੰਨਿਆਂ ਨੂੰ ਐਕਸਟਰੈਕਟ ਕਰੋ</string>
+    <string name="rotate_pdf">PDF ਘੁੰਮਾਓ</string>
+    <string name="rotate_pdf_sub">ਪੰਨਾ ਸਥਿਤੀ ਨੂੰ ਪੱਕੇ ਤੌਰ \'ਤੇ ਠੀਕ ਕਰੋ</string>
+    <string name="pages">ਪੰਨੇ</string>
+    <string name="rearrange_pdf">PDF ਨੂੰ ਮੁੜ ਵਿਵਸਥਿਤ ਕਰੋ</string>
+    <string name="rearrange_pdf_sub">ਉਹਨਾਂ ਨੂੰ ਮੁੜ ਕ੍ਰਮਬੱਧ ਕਰਨ ਲਈ ਪੰਨਿਆਂ ਨੂੰ ਖਿੱਚੋ ਅਤੇ ਛੱਡੋ</string>
+    <string name="hold_drag_drop">ਪੰਨੇ ਫੜੋ ਅਤੇ ਖਿੱਚੋ</string>
+    <string name="page_numbers">ਪੰਨਾ ਨੰਬਰ</string>
+    <string name="page_numbers_sub">ਆਪਣੇ ਦਸਤਾਵੇਜ਼ਾਂ ਵਿੱਚ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਨੰਬਰਿੰਗ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="label_format">ਲੇਬਲ ਫਾਰਮੈਟ</string>
+    <string name="pdf_to_text">PDF ਤੋਂ ਟੈਕਸਟ (OCR)</string>
+    <string name="pdf_to_text_sub">ਆਪਣੇ PDF ਦਸਤਾਵੇਜ਼ਾਂ ਤੋਂ ਸਾਦਾ ਟੈਕਸਟ ਐਕਸਟਰੈਕਟ ਕਰੋ</string>
+    <string name="watermark_pdf_sub">ਬ੍ਰਾਂਡਿੰਗ ਜਾਂ ਸੁਰੱਖਿਆ ਲਈ ਕਸਟਮ ਟੈਕਸਟ ਨੂੰ ਓਵਰਲੇ ਕਰੋ</string>
+    <string name="signature">ਦਸਤਖਤ</string>
+    <string name="signature_sub">ਕਿਸੇ ਵੀ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਆਪਣੇ ਇਲੈਕਟ੍ਰਾਨਿਕ ਦਸਤਖਤ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="will_be_for_signature">ਇਹ ਦਸਤਖਤ ਵਜੋਂ ਵਰਤਿਆ ਜਾਵੇਗਾ</string>
+    <string name="unlock_pdf">PDF ਨੂੰ ਅਨਲੌਕ ਕਰੋ</string>
+    <string name="unlock_pdf_sub">ਆਪਣੀਆਂ ਸੁਰੱਖਿਅਤ ਫਾਈਲਾਂ ਤੋਂ ਪਾਸਵਰਡ ਹਟਾਓ</string>
+    <string name="protect_pdf">PDF ਨੂੰ ਸੁਰੱਖਿਅਤ ਕਰੋ</string>
+    <string name="protect_pdf_sub">ਆਪਣੇ ਦਸਤਾਵੇਜ਼ਾਂ ਨੂੰ ਮਜ਼ਬੂਤ ​​ਏਨਕ੍ਰਿਪਸ਼ਨ ਨਾਲ ਸੁਰੱਖਿਅਤ ਕਰੋ</string>
+    <string name="success">ਸਫਲਤਾ</string>
+    <string name="pdf_unlocked">PDF ਅਨਲੌਕ, ਤੁਸੀਂ ਇਸਨੂੰ ਸੁਰੱਖਿਅਤ ਜਾਂ ਸਾਂਝਾ ਕਰ ਸਕਦੇ ਹੋ</string>
+    <string name="repair_pdf">PDF ਦੀ ਮੁਰੰਮਤ ਕਰੋ</string>
+    <string name="repair_pdf_sub">ਖਰਾਬ ਜਾਂ ਨਾ-ਪੜ੍ਹਨਯੋਗ ਦਸਤਾਵੇਜ਼ਾਂ ਨੂੰ ਠੀਕ ਕਰਨ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰੋ</string>
+    <string name="grayscale">ਗ੍ਰੇਸਕੇਲ</string>
+    <string name="grayscale_pdf_sub">ਸਾਰੇ ਦਸਤਾਵੇਜ਼ ਏਮਬੈਡਡ ਚਿੱਤਰਾਂ ਨੂੰ ਗ੍ਰੇਸਕੇਲ ਵਿੱਚ ਬਦਲੋ</string>
+    <string name="compress_pdf">ਪੀਡੀਐਫ ਨੂੰ ਸੰਕੁਚਿਤ ਕਰੋ</string>
+    <string name="compress_pdf_sub">ਆਸਾਨੀ ਨਾਲ ਸਾਂਝਾ ਕਰਨ ਲਈ ਆਪਣੇ ਦਸਤਾਵੇਜ਼ ਫਾਈਲ ਆਕਾਰ ਨੂੰ ਅਨੁਕੂਲ ਬਣਾਓ</string>
+    <string name="repair_info">ਚਿੱਤਰ ਟੂਲਬਾਕਸ ਅੰਦਰੂਨੀ ਕਰਾਸ-ਰੈਫਰੈਂਸ ਟੇਬਲ ਨੂੰ ਦੁਬਾਰਾ ਬਣਾਉਂਦਾ ਹੈ ਅਤੇ ਸਕ੍ਰੈਚ ਤੋਂ ਫਾਈਲ ਬਣਤਰ ਨੂੰ ਦੁਬਾਰਾ ਬਣਾਉਂਦਾ ਹੈ। ਇਹ ਬਹੁਤ ਸਾਰੀਆਂ ਫਾਈਲਾਂ ਤੱਕ ਪਹੁੰਚ ਨੂੰ ਬਹਾਲ ਕਰ ਸਕਦਾ ਹੈ ਜੋ \\"ਖੋਲ੍ਹੀਆਂ ਨਹੀਂ ਜਾ ਸਕਦੀਆਂ\\"।</string>
+    <string name="grayscale_info">ਇਹ ਟੂਲ ਸਾਰੇ ਦਸਤਾਵੇਜ਼ ਚਿੱਤਰਾਂ ਨੂੰ ਗ੍ਰੇਸਕੇਲ ਵਿੱਚ ਬਦਲਦਾ ਹੈ। ਪ੍ਰਿੰਟਿੰਗ ਅਤੇ ਫਾਈਲ ਦਾ ਆਕਾਰ ਘਟਾਉਣ ਲਈ ਸਭ ਤੋਂ ਵਧੀਆ</string>
+    <string name="metadata">ਮੈਟਾਡਾਟਾ</string>
+    <string name="metadata_pdf_sub">ਬਿਹਤਰ ਗੋਪਨੀਯਤਾ ਲਈ ਦਸਤਾਵੇਜ਼ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਨੂੰ ਸੰਪਾਦਿਤ ਕਰੋ</string>
+    <string name="tags">ਟੈਗਸ</string>
+    <string name="producer">ਨਿਰਮਾਤਾ</string>
+    <string name="author">ਲੇਖਕ</string>
+    <string name="keywords">ਕੀਵਰਡਸ</string>
+    <string name="creator">ਸਿਰਜਣਹਾਰ</string>
+    <string name="privacy_deep_clean">ਗੋਪਨੀਯਤਾ ਡੂੰਘੀ ਸਾਫ਼</string>
+    <string name="privacy_deep_clean_sub">ਇਸ ਦਸਤਾਵੇਜ਼ ਲਈ ਉਪਲਬਧ ਸਾਰੇ ਮੈਟਾਡੇਟਾ ਨੂੰ ਸਾਫ਼ ਕਰੋ</string>
 </resources>
