--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2111,4 +2111,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Przywraca obrazy o niskiej jakości przy użyciu transformatora Swin2SR, zoptymalizowanego pod kątem degradacji BSRGAN. Doskonały do ​​naprawiania artefaktów spowodowanych dużą kompresją i uwydatniania szczegółów w skali 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Skalowanie 4x za pomocą transformatora SwinIR trenowanego pod kątem degradacji BSRGAN. Wykorzystuje GAN, aby uzyskać ostrzejsze tekstury i bardziej naturalne szczegóły na zdjęciach i złożonych scenach.</string>
     <string name="path">Ścieżka</string>
+    <string name="merge_pdf">Scal PDF</string>
+    <string name="merge_pdf_sub">Połącz wiele plików PDF w jeden dokument</string>
+    <string name="files_order">Kolejność plików</string>
+    <string name="pages_short">s.</string>
+    <string name="split_pdf">Podziel plik PDF</string>
+    <string name="split_pdf_sub">Wyodrębnij określone strony z dokumentu PDF</string>
+    <string name="rotate_pdf">Obróć plik PDF</string>
+    <string name="rotate_pdf_sub">Napraw na stałe orientację strony</string>
+    <string name="pages">Strony</string>
+    <string name="rearrange_pdf">Zmień kolejność plików PDF</string>
+    <string name="rearrange_pdf_sub">Przeciągnij i upuść strony, aby zmienić ich kolejność</string>
+    <string name="hold_drag_drop">Przytrzymaj i przeciągnij strony</string>
+    <string name="page_numbers">Numery stron</string>
+    <string name="page_numbers_sub">Automatycznie dodawaj numerację do swoich dokumentów</string>
+    <string name="label_format">Format etykiety</string>
+    <string name="pdf_to_text">PDF na tekst (OCR)</string>
+    <string name="pdf_to_text_sub">Wyodrębnij zwykły tekst z dokumentów PDF</string>
+    <string name="watermark_pdf_sub">Nałóż niestandardowy tekst dla marki lub bezpieczeństwa</string>
+    <string name="signature">Podpis</string>
+    <string name="signature_sub">Dodaj swój podpis elektroniczny do dowolnego dokumentu</string>
+    <string name="will_be_for_signature">Będzie to używane jako podpis</string>
+    <string name="unlock_pdf">Odblokuj PDF</string>
+    <string name="unlock_pdf_sub">Usuń hasła z chronionych plików</string>
+    <string name="protect_pdf">Chroń PDF</string>
+    <string name="protect_pdf_sub">Zabezpiecz swoje dokumenty silnym szyfrowaniem</string>
+    <string name="success">Sukces</string>
+    <string name="pdf_unlocked">PDF odblokowany, możesz go zapisać lub udostępnić</string>
+    <string name="repair_pdf">Napraw PDF</string>
+    <string name="repair_pdf_sub">Spróbuj naprawić uszkodzone lub nieczytelne dokumenty</string>
+    <string name="grayscale">Skala szarości</string>
+    <string name="grayscale_pdf_sub">Konwertuj wszystkie obrazy osadzone w dokumencie na skalę szarości</string>
+    <string name="compress_pdf">Kompresuj PDF</string>
+    <string name="compress_pdf_sub">Zoptymalizuj rozmiar pliku dokumentu, aby ułatwić udostępnianie</string>
+    <string name="repair_info">ImageToolbox odbudowuje wewnętrzną tabelę powiązań i ponownie generuje strukturę pliku od podstaw. Może to przywrócić dostęp do wielu plików, których „nie można otworzyć”</string>
+    <string name="grayscale_info">To narzędzie konwertuje wszystkie obrazy dokumentów do skali szarości. Najlepsze do drukowania i zmniejszania rozmiaru pliku</string>
+    <string name="metadata">Metadane</string>
+    <string name="metadata_pdf_sub">Edytuj właściwości dokumentu, aby zapewnić większą prywatność</string>
+    <string name="tags">Tagi</string>
+    <string name="producer">Producent</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Słowa kluczowe</string>
+    <string name="creator">Twórca</string>
+    <string name="privacy_deep_clean">Głębokie czyszczenie prywatności</string>
+    <string name="privacy_deep_clean_sub">Wyczyść wszystkie dostępne metadane dla tego dokumentu</string>
 </resources>
