--- a/core/resources/src/main/res/values-pt-rBR/strings.xml
+++ b/core/resources/src/main/res/values-pt-rBR/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Restaura imagens de baixa qualidade usando o transformador Swin2SR, otimizado para degradação BSRGAN. Ótimo para corrigir artefatos de compactação pesada e aprimorar detalhes em escala 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Upscaling 4x com transformador SwinIR treinado na degradação BSRGAN. Usa GAN para texturas mais nítidas e detalhes mais naturais em fotos e cenas complexas.</string>
     <string name="path">Caminho</string>
+    <string name="merge_pdf">Mesclar PDF</string>
+    <string name="merge_pdf_sub">Combine vários arquivos PDF em um documento</string>
+    <string name="files_order">Ordem dos arquivos</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Dividir PDF</string>
+    <string name="split_pdf_sub">Extraia páginas específicas de um documento PDF</string>
+    <string name="rotate_pdf">Girar PDF</string>
+    <string name="rotate_pdf_sub">Corrija a orientação da página permanentemente</string>
+    <string name="pages">Páginas</string>
+    <string name="rearrange_pdf">Reorganizar PDF</string>
+    <string name="rearrange_pdf_sub">Arraste e solte páginas para reordená-las</string>
+    <string name="hold_drag_drop">Segure e arraste páginas</string>
+    <string name="page_numbers">Números de página</string>
+    <string name="page_numbers_sub">Adicione numeração aos seus documentos automaticamente</string>
+    <string name="label_format">Formato da etiqueta</string>
+    <string name="pdf_to_text">PDF para texto (OCR)</string>
+    <string name="pdf_to_text_sub">Extraia texto simples de seus documentos PDF</string>
+    <string name="watermark_pdf_sub">Sobreponha texto personalizado para marca ou segurança</string>
+    <string name="signature">Assinatura</string>
+    <string name="signature_sub">Adicione sua assinatura eletrônica a qualquer documento</string>
+    <string name="will_be_for_signature">Isso será usado como assinatura</string>
+    <string name="unlock_pdf">Desbloquear PDF</string>
+    <string name="unlock_pdf_sub">Remova senhas de seus arquivos protegidos</string>
+    <string name="protect_pdf">Proteger PDF</string>
+    <string name="protect_pdf_sub">Proteja seus documentos com criptografia forte</string>
+    <string name="success">Sucesso</string>
+    <string name="pdf_unlocked">PDF desbloqueado, você pode salvá-lo ou compartilhá-lo</string>
+    <string name="repair_pdf">Reparar PDF</string>
+    <string name="repair_pdf_sub">Tentativa de consertar documentos corrompidos ou ilegíveis</string>
+    <string name="grayscale">Tons de cinza</string>
+    <string name="grayscale_pdf_sub">Converta todas as imagens incorporadas em documentos em tons de cinza</string>
+    <string name="compress_pdf">Compactar PDF</string>
+    <string name="compress_pdf_sub">Otimize o tamanho do arquivo do seu documento para facilitar o compartilhamento</string>
+    <string name="repair_info">ImageToolbox reconstrói a tabela de referência cruzada interna e regenera a estrutura do arquivo do zero. Isso pode restaurar o acesso a muitos arquivos que \"não podem ser abertos\"</string>
+    <string name="grayscale_info">Esta ferramenta converte todas as imagens de documentos em tons de cinza. Melhor para imprimir e reduzir o tamanho do arquivo</string>
+    <string name="metadata">Metadados</string>
+    <string name="metadata_pdf_sub">Edite as propriedades do documento para melhor privacidade</string>
+    <string name="tags">Etiquetas</string>
+    <string name="producer">Produtor</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Palavras-chave</string>
+    <string name="creator">Criador</string>
+    <string name="privacy_deep_clean">Limpeza Profunda de Privacidade</string>
+    <string name="privacy_deep_clean_sub">Limpe todos os metadados disponíveis para este documento</string>
 </resources>
