--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -2110,4 +2110,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Restaurează imagini de calitate scăzută folosind transformatorul Swin2SR, optimizat pentru degradarea BSRGAN. Excelent pentru repararea artefactelor de compresie grele și îmbunătățirea detaliilor la scară de 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Upscaling de 4x cu transformator SwinIR instruit pe degradarea BSRGAN. Utilizează GAN pentru texturi mai clare și detalii mai naturale în fotografii și scene complexe.</string>
     <string name="path">Cale</string>
+    <string name="merge_pdf">Îmbinați PDF</string>
+    <string name="merge_pdf_sub">Combinați mai multe fișiere PDF într-un singur document</string>
+    <string name="files_order">Ordinea fișierelor</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Divizarea PDF-ului</string>
+    <string name="split_pdf_sub">Extrage anumite pagini din documentul PDF</string>
+    <string name="rotate_pdf">Rotiți PDF</string>
+    <string name="rotate_pdf_sub">Remediați permanent orientarea paginii</string>
+    <string name="pages">Pagini</string>
+    <string name="rearrange_pdf">Rearanjați PDF</string>
+    <string name="rearrange_pdf_sub">Trageți și plasați paginile pentru a le reordona</string>
+    <string name="hold_drag_drop">Țineți apăsat și trageți paginile</string>
+    <string name="page_numbers">Numerele paginilor</string>
+    <string name="page_numbers_sub">Adăugați automat numerotarea documentelor dvs</string>
+    <string name="label_format">Format etichetă</string>
+    <string name="pdf_to_text">PDF în text (OCR)</string>
+    <string name="pdf_to_text_sub">Extrageți text simplu din documentele dumneavoastră PDF</string>
+    <string name="watermark_pdf_sub">Suprapuneți text personalizat pentru branding sau securitate</string>
+    <string name="signature">Semnătura</string>
+    <string name="signature_sub">Adaugă semnătura ta electronică la orice document</string>
+    <string name="will_be_for_signature">Acesta va fi folosit ca semnătură</string>
+    <string name="unlock_pdf">Deblocați PDF</string>
+    <string name="unlock_pdf_sub">Eliminați parolele din fișierele dvs. protejate</string>
+    <string name="protect_pdf">Protejați PDF</string>
+    <string name="protect_pdf_sub">Asigurați-vă documentele cu criptare puternică</string>
+    <string name="success">Succes</string>
+    <string name="pdf_unlocked">PDF deblocat, îl puteți salva sau partaja</string>
+    <string name="repair_pdf">Repara PDF</string>
+    <string name="repair_pdf_sub">Încercați să remediați documentele corupte sau ilizibile</string>
+    <string name="grayscale">Tonuri de gri</string>
+    <string name="grayscale_pdf_sub">Convertiți toate imaginile încorporate în document în tonuri de gri</string>
+    <string name="compress_pdf">Comprimați PDF</string>
+    <string name="compress_pdf_sub">Optimizați dimensiunea fișierului documentului pentru o partajare mai ușoară</string>
+    <string name="repair_info">ImageToolbox reconstruiește tabelul intern de referințe încrucișate și regenerează structura fișierului de la zero. Acest lucru poate restabili accesul la multe fișiere care „nu pot fi deschise”</string>
+    <string name="grayscale_info">Acest instrument convertește toate imaginile documentului în tonuri de gri. Cel mai bun pentru tipărirea și reducerea dimensiunii fișierului</string>
+    <string name="metadata">Metadate</string>
+    <string name="metadata_pdf_sub">Editați proprietățile documentului pentru o confidențialitate mai bună</string>
+    <string name="tags">Etichete</string>
+    <string name="producer">Producător</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Cuvinte cheie</string>
+    <string name="creator">Creator</string>
+    <string name="privacy_deep_clean">Confidențialitate Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Ștergeți toate metadatele disponibile pentru acest document</string>
 </resources>
