--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2111,4 +2111,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Восстанавливает изображения низкого качества с помощью преобразователя Swin2SR, оптимизированного для деградации BSRGAN. Отлично подходит для исправления сильных артефактов сжатия и улучшения деталей в 4-кратном масштабе.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4-кратное масштабирование с помощью преобразователя SwinIR, обученного ухудшению BSRGAN. Использует GAN для получения более четких текстур и более естественных деталей на фотографиях и сложных сценах.</string>
     <string name="path">Путь</string>
+    <string name="merge_pdf">Объединить PDF-файл</string>
+    <string name="merge_pdf_sub">Объединение нескольких PDF-файлов в один документ</string>
+    <string name="files_order">Порядок файлов</string>
+    <string name="pages_short">стр.</string>
+    <string name="split_pdf">Разделить PDF</string>
+    <string name="split_pdf_sub">Извлечь определенные страницы из PDF-документа</string>
+    <string name="rotate_pdf">Повернуть PDF</string>
+    <string name="rotate_pdf_sub">Исправить ориентацию страницы навсегда</string>
+    <string name="pages">Страницы</string>
+    <string name="rearrange_pdf">Переупорядочить PDF</string>
+    <string name="rearrange_pdf_sub">Перетаскивайте страницы, чтобы изменить их порядок</string>
+    <string name="hold_drag_drop">Удерживайте и перетащите страницы</string>
+    <string name="page_numbers">Номера страниц</string>
+    <string name="page_numbers_sub">Добавляйте нумерацию к вашим документам автоматически</string>
+    <string name="label_format">Формат этикетки</string>
+    <string name="pdf_to_text">PDF в текст (OCR)</string>
+    <string name="pdf_to_text_sub">Извлекайте простой текст из ваших PDF-документов</string>
+    <string name="watermark_pdf_sub">Наложение пользовательского текста для брендинга или безопасности</string>
+    <string name="signature">Подпись</string>
+    <string name="signature_sub">Добавьте свою электронную подпись к любому документу</string>
+    <string name="will_be_for_signature">Это будет использоваться в качестве подписи</string>
+    <string name="unlock_pdf">Разблокировать PDF</string>
+    <string name="unlock_pdf_sub">Удалите пароли из ваших защищенных файлов</string>
+    <string name="protect_pdf">Защитить PDF</string>
+    <string name="protect_pdf_sub">Защитите свои документы надежным шифрованием</string>
+    <string name="success">Успех</string>
+    <string name="pdf_unlocked">PDF-файл разблокирован, вы можете сохранить его или поделиться им.</string>
+    <string name="repair_pdf">Восстановить PDF</string>
+    <string name="repair_pdf_sub">Попытайтесь исправить поврежденные или нечитаемые документы.</string>
+    <string name="grayscale">Оттенки серого</string>
+    <string name="grayscale_pdf_sub">Преобразование всех встроенных изображений документа в оттенки серого</string>
+    <string name="compress_pdf">Сжать PDF</string>
+    <string name="compress_pdf_sub">Оптимизируйте размер файла документа для упрощения обмена</string>
+    <string name="repair_info">ImageToolbox перестраивает внутреннюю таблицу перекрестных ссылок и восстанавливает структуру файла с нуля. Это может восстановить доступ ко многим файлам, которые «нельзя открыть».</string>
+    <string name="grayscale_info">Этот инструмент преобразует все изображения документов в оттенки серого. Лучше всего подходит для печати и уменьшения размера файла.</string>
+    <string name="metadata">Метаданные</string>
+    <string name="metadata_pdf_sub">Редактируйте свойства документа для большей конфиденциальности</string>
+    <string name="tags">Теги</string>
+    <string name="producer">Продюсер</string>
+    <string name="author">Автор</string>
+    <string name="keywords">Ключевые слова</string>
+    <string name="creator">Создатель</string>
+    <string name="privacy_deep_clean">Конфиденциальность Глубокая очистка</string>
+    <string name="privacy_deep_clean_sub">Удалить все доступные метаданные для этого документа.</string>
 </resources>
