--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2110,4 +2110,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ට්‍රාන්ස්ෆෝමරය භාවිතයෙන් අඩු ගුණාත්මක රූප ප්‍රතිසාධනය කරයි, BSRGAN හායනය සඳහා ප්‍රශස්ත කර ඇත. බර සම්පීඩන කෞතුක වස්තු සවි කිරීම සහ 4x පරිමාණයෙන් විස්තර වැඩි දියුණු කිරීම සඳහා විශිෂ්ටයි.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN හායනය පිළිබඳ පුහුණු කරන ලද SwinIR ට්‍රාන්ස්ෆෝමරය සමඟ 4x ඉහළ නැංවීම. ඡායාරූප සහ සංකීර්ණ දර්ශනවල තියුණු වයනය සහ වඩාත් ස්වාභාවික විස්තර සඳහා GAN භාවිතා කරයි.</string>
     <string name="path">මාර්ගය</string>
+    <string name="merge_pdf">PDF ඒකාබද්ධ කරන්න</string>
+    <string name="merge_pdf_sub">PDF ගොනු කිහිපයක් එක් ලේඛනයකට ඒකාබද්ධ කරන්න</string>
+    <string name="files_order">ගොනු ඇණවුම</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">PDF බෙදන්න</string>
+    <string name="split_pdf_sub">PDF ලේඛනයෙන් නිශ්චිත පිටු උපුටා ගන්න</string>
+    <string name="rotate_pdf">PDF කරකවන්න</string>
+    <string name="rotate_pdf_sub">පිටු දිශානතිය ස්ථිරවම නිවැරදි කරන්න</string>
+    <string name="pages">පිටු</string>
+    <string name="rearrange_pdf">PDF නැවත සකස් කරන්න</string>
+    <string name="rearrange_pdf_sub">නැවත ඇණවුම් කිරීමට පිටු ඇද දමන්න</string>
+    <string name="hold_drag_drop">පිටු අල්ලාගෙන අදින්න</string>
+    <string name="page_numbers">පිටු අංක</string>
+    <string name="page_numbers_sub">ඔබගේ ලේඛනවලට ස්වයංක්‍රීයව අංකනය එක් කරන්න</string>
+    <string name="label_format">ලේබල් ආකෘතිය</string>
+    <string name="pdf_to_text">PDF සිට පෙළ (OCR)</string>
+    <string name="pdf_to_text_sub">ඔබගේ PDF ලේඛන වලින් සරල පෙළ උපුටා ගන්න</string>
+    <string name="watermark_pdf_sub">සන්නාමකරණය හෝ ආරක්ෂාව සඳහා අභිරුචි පෙළ ආවරණය කරන්න</string>
+    <string name="signature">අත්සන</string>
+    <string name="signature_sub">ඕනෑම ලේඛනයකට ඔබේ විද්‍යුත් අත්සන එක් කරන්න</string>
+    <string name="will_be_for_signature">මෙය අත්සනක් ලෙස භාවිතා කරනු ඇත</string>
+    <string name="unlock_pdf">PDF අගුළු හරින්න</string>
+    <string name="unlock_pdf_sub">ඔබගේ ආරක්ෂිත ගොනු වලින් මුරපද ඉවත් කරන්න</string>
+    <string name="protect_pdf">PDF ආරක්ෂා කරන්න</string>
+    <string name="protect_pdf_sub">ශක්තිමත් සංකේතනයකින් ඔබේ ලේඛන සුරක්ෂිත කරන්න</string>
+    <string name="success">සාර්ථකත්වය</string>
+    <string name="pdf_unlocked">PDF අගුළු හැර ඇත, ඔබට එය සුරැකීමට හෝ බෙදා ගැනීමට හැකිය</string>
+    <string name="repair_pdf">PDF අලුත්වැඩියා කරන්න</string>
+    <string name="repair_pdf_sub">දූෂිත හෝ කියවිය නොහැකි ලේඛන නිවැරදි කිරීමට උත්සාහ කිරීම</string>
+    <string name="grayscale">අළු පරිමාණ</string>
+    <string name="grayscale_pdf_sub">සියලුම ලේඛන කාවැද්දූ පින්තූර අළු පරිමාණයට පරිවර්තනය කරන්න</string>
+    <string name="compress_pdf">PDF සම්පීඩනය කරන්න</string>
+    <string name="compress_pdf_sub">පහසු බෙදාගැනීම සඳහා ඔබේ ලේඛන ගොනු ප්‍රමාණය ප්‍රශස්ත කරන්න</string>
+    <string name="repair_info">ImageToolbox අභ්‍යන්තර හරස් යොමු වගුව නැවත ගොඩනඟන අතර මුල සිටම ගොනු ව්‍යුහය ප්‍රතිජනනය කරයි. මෙය \\"විවෘත කළ නොහැකි\\" බොහෝ ගොනු වෙත ප්‍රවේශය ප්‍රතිසාධනය කළ හැක.</string>
+    <string name="grayscale_info">මෙම මෙවලම සියලුම ලේඛන රූප අළු පරිමාණයට පරිවර්තනය කරයි. ගොනු ප්රමාණය මුද්රණය කිරීම සහ අඩු කිරීම සඳහා හොඳම වේ</string>
+    <string name="metadata">පාරදත්ත</string>
+    <string name="metadata_pdf_sub">වඩා හොඳ පෞද්ගලිකත්වය සඳහා ලේඛන ගුණාංග සංස්කරණය කරන්න</string>
+    <string name="tags">ටැග්</string>
+    <string name="producer">නිෂ්පාදකයා</string>
+    <string name="author">කර්තෘ</string>
+    <string name="keywords">මූල පද</string>
+    <string name="creator">නිර්මාතෘ</string>
+    <string name="privacy_deep_clean">පෞද්ගලිකත්වය ගැඹුරු පිරිසිදු</string>
+    <string name="privacy_deep_clean_sub">මෙම ලේඛනය සඳහා ලබා ගත හැකි සියලුම පාර-දත්ත හිස් කරන්න</string>
 </resources>
