--- a/core/resources/src/main/res/values-sk/strings.xml
+++ b/core/resources/src/main/res/values-sk/strings.xml
@@ -2111,4 +2111,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Obnovuje obrázky nízkej kvality pomocou transformátora Swin2SR, optimalizovaného pre degradáciu BSRGAN. Skvelé na opravu ťažkých kompresných artefaktov a vylepšenie detailov v 4-násobnej mierke.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x upscaling s transformátorom SwinIR vyškoleným na degradáciu BSRGAN. Používa GAN pre ostrejšie textúry a prirodzenejšie detaily na fotografiách a zložitých scénach.</string>
     <string name="path">Cesta</string>
+    <string name="merge_pdf">Zlúčiť PDF</string>
+    <string name="merge_pdf_sub">Skombinujte viacero súborov PDF do jedného dokumentu</string>
+    <string name="files_order">Poradie súborov</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Rozdeliť PDF</string>
+    <string name="split_pdf_sub">Extrahujte konkrétne strany z dokumentu PDF</string>
+    <string name="rotate_pdf">Otočiť PDF</string>
+    <string name="rotate_pdf_sub">Opravte orientáciu strany natrvalo</string>
+    <string name="pages">Stránky</string>
+    <string name="rearrange_pdf">Preusporiadať PDF</string>
+    <string name="rearrange_pdf_sub">Presuňte stránky a zmeňte ich poradie</string>
+    <string name="hold_drag_drop">Podržte a potiahnite stránky</string>
+    <string name="page_numbers">Čísla strán</string>
+    <string name="page_numbers_sub">Automaticky pridajte číslovanie do svojich dokumentov</string>
+    <string name="label_format">Formát štítku</string>
+    <string name="pdf_to_text">PDF na text (OCR)</string>
+    <string name="pdf_to_text_sub">Extrahujte obyčajný text z dokumentov PDF</string>
+    <string name="watermark_pdf_sub">Prekrytie vlastného textu pre budovanie značky alebo zabezpečenie</string>
+    <string name="signature">Podpis</string>
+    <string name="signature_sub">Pridajte svoj elektronický podpis do akéhokoľvek dokumentu</string>
+    <string name="will_be_for_signature">Toto sa použije ako podpis</string>
+    <string name="unlock_pdf">Odomknúť PDF</string>
+    <string name="unlock_pdf_sub">Odstráňte heslá z chránených súborov</string>
+    <string name="protect_pdf">Chráňte PDF</string>
+    <string name="protect_pdf_sub">Zabezpečte svoje dokumenty silným šifrovaním</string>
+    <string name="success">Úspech</string>
+    <string name="pdf_unlocked">PDF je odomknuté, môžete ho uložiť alebo zdieľať</string>
+    <string name="repair_pdf">Oprava PDF</string>
+    <string name="repair_pdf_sub">Pokúste sa opraviť poškodené alebo nečitateľné dokumenty</string>
+    <string name="grayscale">Odtiene šedej</string>
+    <string name="grayscale_pdf_sub">Previesť všetky obrázky vložené do dokumentu na odtiene sivej</string>
+    <string name="compress_pdf">Komprimovať PDF</string>
+    <string name="compress_pdf_sub">Optimalizujte veľkosť súboru dokumentu pre jednoduchšie zdieľanie</string>
+    <string name="repair_info">ImageToolbox prestavuje internú tabuľku krížových odkazov a regeneruje štruktúru súborov od začiatku. To môže obnoviť prístup k mnohým súborom, ktoré \\"nemožno otvoriť\\"</string>
+    <string name="grayscale_info">Tento nástroj skonvertuje všetky obrázky dokumentov do odtieňov sivej. Najlepšie na tlač a zmenšenie veľkosti súboru</string>
+    <string name="metadata">Metadáta</string>
+    <string name="metadata_pdf_sub">Upravte vlastnosti dokumentu pre lepšie súkromie</string>
+    <string name="tags">Tagy</string>
+    <string name="producer">Producent</string>
+    <string name="author">Autor</string>
+    <string name="keywords">Kľúčové slová</string>
+    <string name="creator">Tvorca</string>
+    <string name="privacy_deep_clean">Ochrana osobných údajov Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Vymažte všetky dostupné metadáta pre tento dokument</string>
 </resources>
