--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2110,4 +2110,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Враћа слике ниског квалитета помоћу Свин2СР трансформатора, оптимизованог за БСРГАН деградацију. Одлично за поправљање артефаката тешке компресије и побољшање детаља на скали од 4к.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4к повећање са СвинИР трансформатором обученим за БСРГАН деградацију. Користи ГАН за оштрије текстуре и природније детаље на фотографијама и сложеним сценама.</string>
     <string name="path">Пут</string>
+    <string name="merge_pdf">Споји ПДФ</string>
+    <string name="merge_pdf_sub">Комбинујте више ПДФ датотека у један документ</string>
+    <string name="files_order">Филес Ордер</string>
+    <string name="pages_short">стр.</string>
+    <string name="split_pdf">Сплит ПДФ</string>
+    <string name="split_pdf_sub">Извуците одређене странице из ПДФ документа</string>
+    <string name="rotate_pdf">Ротирајте ПДФ</string>
+    <string name="rotate_pdf_sub">Трајно поправи оријентацију странице</string>
+    <string name="pages">Пагес</string>
+    <string name="rearrange_pdf">Преуредите ПДФ</string>
+    <string name="rearrange_pdf_sub">Превуците и отпустите странице да бисте их променили</string>
+    <string name="hold_drag_drop">Задржите и превуците странице</string>
+    <string name="page_numbers">Бројеви страница</string>
+    <string name="page_numbers_sub">Аутоматски додајте нумерацију у своје документе</string>
+    <string name="label_format">Лабел Формат</string>
+    <string name="pdf_to_text">ПДФ у текст (ОЦР)</string>
+    <string name="pdf_to_text_sub">Извуците обичан текст из ваших ПДФ докумената</string>
+    <string name="watermark_pdf_sub">Преклапање прилагођеног текста за брендирање или безбедност</string>
+    <string name="signature">Потпис</string>
+    <string name="signature_sub">Додајте свој електронски потпис на било који документ</string>
+    <string name="will_be_for_signature">Ово ће се користити као потпис</string>
+    <string name="unlock_pdf">Откључај ПДФ</string>
+    <string name="unlock_pdf_sub">Уклоните лозинке из заштићених датотека</string>
+    <string name="protect_pdf">Заштитите ПДФ</string>
+    <string name="protect_pdf_sub">Осигурајте своје документе снажном енкрипцијом</string>
+    <string name="success">Успех</string>
+    <string name="pdf_unlocked">ПДФ је откључан, можете га сачувати или поделити</string>
+    <string name="repair_pdf">Поправи ПДФ</string>
+    <string name="repair_pdf_sub">Покушајте да поправите оштећене или нечитљиве документе</string>
+    <string name="grayscale">Граисцале</string>
+    <string name="grayscale_pdf_sub">Претворите све слике уграђене у документе у сивим тоновима</string>
+    <string name="compress_pdf">Цомпресс ПДФ</string>
+    <string name="compress_pdf_sub">Оптимизујте величину датотеке документа за лакше дељење</string>
+    <string name="repair_info">ИмагеТоолбок поново гради интерну табелу унакрсних референци и регенерише структуру датотеке од нуле. Ово може да врати приступ многим датотекама које се „не могу отворити“</string>
+    <string name="grayscale_info">Овај алат претвара све слике документа у сиве тонове. Најбоље за штампање и смањење величине датотеке</string>
+    <string name="metadata">Метаподаци</string>
+    <string name="metadata_pdf_sub">Уредите својства документа ради боље приватности</string>
+    <string name="tags">Ознаке</string>
+    <string name="producer">Произвођач</string>
+    <string name="author">Аутор</string>
+    <string name="keywords">Кључне речи</string>
+    <string name="creator">Креатор</string>
+    <string name="privacy_deep_clean">Приватност Дееп Цлеан</string>
+    <string name="privacy_deep_clean_sub">Обришите све доступне метаподатке за овај документ</string>
 </resources>
