--- a/core/resources/src/main/res/values-sv/strings.xml
+++ b/core/resources/src/main/res/values-sv/strings.xml
@@ -2110,4 +2110,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Återställer bilder av låg kvalitet med Swin2SR-transformator, optimerad för BSRGAN-nedbrytning. Perfekt för att fixa tunga kompressionsartefakter och förbättra detaljer i 4x skala.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x uppskalning med SwinIR-transformator utbildad på BSRGAN-nedbrytning. Använder GAN för skarpare texturer och mer naturliga detaljer i foton och komplexa scener.</string>
     <string name="path">Väg</string>
+    <string name="merge_pdf">Slå samman PDF</string>
+    <string name="merge_pdf_sub">Kombinera flera PDF-filer till ett dokument</string>
+    <string name="files_order">Beställning av filer</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">Dela PDF</string>
+    <string name="split_pdf_sub">Extrahera specifika sidor från PDF-dokument</string>
+    <string name="rotate_pdf">Rotera PDF</string>
+    <string name="rotate_pdf_sub">Fixa sidorienteringen permanent</string>
+    <string name="pages">Sidor</string>
+    <string name="rearrange_pdf">Ordna om PDF</string>
+    <string name="rearrange_pdf_sub">Dra och släpp sidor för att ändra ordning på dem</string>
+    <string name="hold_drag_drop">Håll och dra sidor</string>
+    <string name="page_numbers">Sidnummer</string>
+    <string name="page_numbers_sub">Lägg till numrering till dina dokument automatiskt</string>
+    <string name="label_format">Etikettformat</string>
+    <string name="pdf_to_text">PDF till text (OCR)</string>
+    <string name="pdf_to_text_sub">Extrahera vanlig text från dina PDF-dokument</string>
+    <string name="watermark_pdf_sub">Överlägg anpassad text för varumärkesbyggande eller säkerhet</string>
+    <string name="signature">Signatur</string>
+    <string name="signature_sub">Lägg till din elektroniska signatur i alla dokument</string>
+    <string name="will_be_for_signature">Detta kommer att användas som signatur</string>
+    <string name="unlock_pdf">Lås upp PDF</string>
+    <string name="unlock_pdf_sub">Ta bort lösenord från dina skyddade filer</string>
+    <string name="protect_pdf">Skydda PDF</string>
+    <string name="protect_pdf_sub">Säkra dina dokument med stark kryptering</string>
+    <string name="success">Framgång</string>
+    <string name="pdf_unlocked">PDF upplåst, du kan spara eller dela den</string>
+    <string name="repair_pdf">Reparera PDF</string>
+    <string name="repair_pdf_sub">Försök att fixa korrupta eller oläsbara dokument</string>
+    <string name="grayscale">Gråskala</string>
+    <string name="grayscale_pdf_sub">Konvertera alla dokumentinbäddade bilder till gråskala</string>
+    <string name="compress_pdf">Komprimera PDF</string>
+    <string name="compress_pdf_sub">Optimera din dokumentfilstorlek för enklare delning</string>
+    <string name="repair_info">ImageToolbox bygger om den interna korsreferenstabellen och regenererar filstrukturen från början. Detta kan återställa åtkomst till många filer som \\"inte kan öppnas\\"</string>
+    <string name="grayscale_info">Detta verktyg konverterar alla dokumentbilder till gråskala. Bäst för att skriva ut och minska filstorleken</string>
+    <string name="metadata">Metadata</string>
+    <string name="metadata_pdf_sub">Redigera dokumentegenskaper för bättre sekretess</string>
+    <string name="tags">Taggar</string>
+    <string name="producer">Producent</string>
+    <string name="author">Författare</string>
+    <string name="keywords">Nyckelord</string>
+    <string name="creator">Skapare</string>
+    <string name="privacy_deep_clean">Sekretess Deep Clean</string>
+    <string name="privacy_deep_clean_sub">Rensa all tillgänglig metadata för detta dokument</string>
 </resources>
