--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR மின்மாற்றியைப் பயன்படுத்தி குறைந்த தரமான படங்களை மீட்டமைக்கிறது, BSRGAN சிதைவுக்கு உகந்தது. கனமான சுருக்க கலைப்பொருட்களை சரிசெய்வதற்கும், விவரங்களை 4x அளவில் மேம்படுத்துவதற்கும் சிறந்தது.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN சிதைவு குறித்து பயிற்சியளிக்கப்பட்ட SwinIR மின்மாற்றியுடன் 4x உயர்நிலை. புகைப்படங்கள் மற்றும் சிக்கலான காட்சிகளில் கூர்மையான அமைப்பு மற்றும் இயற்கையான விவரங்களுக்கு GAN ஐப் பயன்படுத்துகிறது.</string>
     <string name="path">பாதை</string>
+    <string name="merge_pdf">PDF ஐ இணைக்கவும்</string>
+    <string name="merge_pdf_sub">பல PDF கோப்புகளை ஒரு ஆவணத்தில் இணைக்கவும்</string>
+    <string name="files_order">கோப்புகள் ஆர்டர்</string>
+    <string name="pages_short">பக்.</string>
+    <string name="split_pdf">PDF ஐப் பிரிக்கவும்</string>
+    <string name="split_pdf_sub">PDF ஆவணத்திலிருந்து குறிப்பிட்ட பக்கங்களைப் பிரித்தெடுக்கவும்</string>
+    <string name="rotate_pdf">PDF ஐ சுழற்று</string>
+    <string name="rotate_pdf_sub">பக்க நோக்குநிலையை நிரந்தரமாக சரிசெய்யவும்</string>
+    <string name="pages">பக்கங்கள்</string>
+    <string name="rearrange_pdf">PDF ஐ மறுசீரமைக்கவும்</string>
+    <string name="rearrange_pdf_sub">மறுவரிசைப்படுத்த பக்கங்களை இழுத்து விடவும்</string>
+    <string name="hold_drag_drop">பக்கங்களைப் பிடித்து இழுக்கவும்</string>
+    <string name="page_numbers">பக்க எண்கள்</string>
+    <string name="page_numbers_sub">உங்கள் ஆவணங்களில் தானாக எண்ணைச் சேர்க்கவும்</string>
+    <string name="label_format">லேபிள் வடிவம்</string>
+    <string name="pdf_to_text">PDF to Text (OCR)</string>
+    <string name="pdf_to_text_sub">உங்கள் PDF ஆவணங்களிலிருந்து எளிய உரையைப் பிரித்தெடுக்கவும்</string>
+    <string name="watermark_pdf_sub">பிராண்டிங் அல்லது பாதுகாப்பிற்கான தனிப்பயன் உரை மேலடுக்கு</string>
+    <string name="signature">கையெழுத்து</string>
+    <string name="signature_sub">எந்த ஆவணத்திலும் உங்கள் மின்னணு கையொப்பத்தைச் சேர்க்கவும்</string>
+    <string name="will_be_for_signature">இது கையொப்பமாக பயன்படுத்தப்படும்</string>
+    <string name="unlock_pdf">PDF ஐ திறக்கவும்</string>
+    <string name="unlock_pdf_sub">உங்கள் பாதுகாக்கப்பட்ட கோப்புகளிலிருந்து கடவுச்சொற்களை அகற்றவும்</string>
+    <string name="protect_pdf">PDF ஐப் பாதுகாக்கவும்</string>
+    <string name="protect_pdf_sub">வலுவான குறியாக்கத்துடன் உங்கள் ஆவணங்களைப் பாதுகாக்கவும்</string>
+    <string name="success">வெற்றி</string>
+    <string name="pdf_unlocked">PDF திறக்கப்பட்டது, நீங்கள் அதை சேமிக்கலாம் அல்லது பகிரலாம்</string>
+    <string name="repair_pdf">PDF பழுது</string>
+    <string name="repair_pdf_sub">சிதைந்த அல்லது படிக்க முடியாத ஆவணங்களைச் சரிசெய்யும் முயற்சி</string>
+    <string name="grayscale">கிரேஸ்கேல்</string>
+    <string name="grayscale_pdf_sub">அனைத்து ஆவண உட்பொதிக்கப்பட்ட படங்களையும் கிரேஸ்கேலுக்கு மாற்றவும்</string>
+    <string name="compress_pdf">PDF ஐ சுருக்கவும்</string>
+    <string name="compress_pdf_sub">எளிதாகப் பகிர உங்கள் ஆவணக் கோப்பின் அளவை மேம்படுத்தவும்</string>
+    <string name="repair_info">ImageToolbox உள் குறுக்கு-குறிப்பு அட்டவணையை மீண்டும் உருவாக்குகிறது மற்றும் புதிதாக கோப்பு கட்டமைப்பை மீண்டும் உருவாக்குகிறது. இது \\"திறக்க முடியாத\\" பல கோப்புகளுக்கான அணுகலை மீட்டெடுக்கும்.</string>
+    <string name="grayscale_info">இந்தக் கருவி அனைத்து ஆவணப் படங்களையும் கிரேஸ்கேலுக்கு மாற்றுகிறது. கோப்பு அளவை அச்சிடுவதற்கும் குறைப்பதற்கும் சிறந்தது</string>
+    <string name="metadata">மெட்டாடேட்டா</string>
+    <string name="metadata_pdf_sub">சிறந்த தனியுரிமைக்காக ஆவண பண்புகளைத் திருத்தவும்</string>
+    <string name="tags">குறிச்சொற்கள்</string>
+    <string name="producer">தயாரிப்பாளர்</string>
+    <string name="author">ஆசிரியர்</string>
+    <string name="keywords">முக்கிய வார்த்தைகள்</string>
+    <string name="creator">படைப்பாளி</string>
+    <string name="privacy_deep_clean">தனியுரிமை ஆழமான சுத்தம்</string>
+    <string name="privacy_deep_clean_sub">இந்த ஆவணத்திற்கு கிடைக்கக்கூடிய அனைத்து மெட்டாடேட்டாவையும் அழிக்கவும்</string>
 </resources>
