--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ట్రాన్స్‌ఫార్మర్‌ని ఉపయోగించి తక్కువ-నాణ్యత చిత్రాలను పునరుద్ధరిస్తుంది, BSRGAN అధోకరణం కోసం ఆప్టిమైజ్ చేయబడింది. భారీ కుదింపు కళాఖండాలను ఫిక్సింగ్ చేయడానికి మరియు 4x స్కేల్‌లో వివరాలను మెరుగుపరచడానికి గొప్పది.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN క్షీణతపై శిక్షణ పొందిన SwinIR ట్రాన్స్‌ఫార్మర్‌తో 4x అప్‌స్కేలింగ్. ఫోటోలు మరియు సంక్లిష్ట దృశ్యాలలో పదునైన అల్లికలు మరియు మరింత సహజమైన వివరాల కోసం GANని ఉపయోగిస్తుంది.</string>
     <string name="path">మార్గం</string>
+    <string name="merge_pdf">PDFని విలీనం చేయండి</string>
+    <string name="merge_pdf_sub">బహుళ PDF ఫైల్‌లను ఒక పత్రంలో కలపండి</string>
+    <string name="files_order">ఫైల్స్ ఆర్డర్</string>
+    <string name="pages_short">పేజీలు</string>
+    <string name="split_pdf">PDFని విభజించండి</string>
+    <string name="split_pdf_sub">PDF పత్రం నుండి నిర్దిష్ట పేజీలను సంగ్రహించండి</string>
+    <string name="rotate_pdf">PDFని తిప్పండి</string>
+    <string name="rotate_pdf_sub">పేజీ విన్యాసాన్ని శాశ్వతంగా పరిష్కరించండి</string>
+    <string name="pages">పేజీలు</string>
+    <string name="rearrange_pdf">PDFని మళ్లీ అమర్చండి</string>
+    <string name="rearrange_pdf_sub">వాటిని క్రమాన్ని మార్చడానికి పేజీలను లాగండి మరియు వదలండి</string>
+    <string name="hold_drag_drop">పేజీలను పట్టుకుని లాగండి</string>
+    <string name="page_numbers">పేజీ సంఖ్యలు</string>
+    <string name="page_numbers_sub">మీ పత్రాలకు స్వయంచాలకంగా నంబరింగ్ జోడించండి</string>
+    <string name="label_format">లేబుల్ ఫార్మాట్</string>
+    <string name="pdf_to_text">PDF నుండి టెక్స్ట్ (OCR)</string>
+    <string name="pdf_to_text_sub">మీ PDF పత్రాల నుండి సాదా వచనాన్ని సంగ్రహించండి</string>
+    <string name="watermark_pdf_sub">బ్రాండింగ్ లేదా భద్రత కోసం అనుకూల వచనాన్ని అతివ్యాప్తి చేయండి</string>
+    <string name="signature">సంతకం</string>
+    <string name="signature_sub">ఏదైనా పత్రానికి మీ ఎలక్ట్రానిక్ సంతకాన్ని జోడించండి</string>
+    <string name="will_be_for_signature">ఇది సంతకం వలె ఉపయోగించబడుతుంది</string>
+    <string name="unlock_pdf">PDFని అన్‌లాక్ చేయండి</string>
+    <string name="unlock_pdf_sub">మీ రక్షిత ఫైల్‌ల నుండి పాస్‌వర్డ్‌లను తీసివేయండి</string>
+    <string name="protect_pdf">PDFని రక్షించండి</string>
+    <string name="protect_pdf_sub">బలమైన ఎన్‌క్రిప్షన్‌తో మీ పత్రాలను భద్రపరచండి</string>
+    <string name="success">విజయం</string>
+    <string name="pdf_unlocked">PDF అన్‌లాక్ చేయబడింది, మీరు దీన్ని సేవ్ చేయవచ్చు లేదా భాగస్వామ్యం చేయవచ్చు</string>
+    <string name="repair_pdf">PDFని రిపేర్ చేయండి</string>
+    <string name="repair_pdf_sub">పాడైన లేదా చదవలేని పత్రాలను పరిష్కరించడానికి ప్రయత్నం</string>
+    <string name="grayscale">గ్రేస్కేల్</string>
+    <string name="grayscale_pdf_sub">అన్ని డాక్యుమెంట్ ఎంబెడెడ్ ఇమేజ్‌లను గ్రేస్కేల్‌కి మార్చండి</string>
+    <string name="compress_pdf">PDFని కుదించుము</string>
+    <string name="compress_pdf_sub">సులభంగా భాగస్వామ్యం చేయడానికి మీ డాక్యుమెంట్ ఫైల్ పరిమాణాన్ని ఆప్టిమైజ్ చేయండి</string>
+    <string name="repair_info">ImageToolbox అంతర్గత క్రాస్-రిఫరెన్స్ పట్టికను పునర్నిర్మిస్తుంది మరియు మొదటి నుండి ఫైల్ నిర్మాణాన్ని పునరుత్పత్తి చేస్తుంది. ఇది \\"తెరవలేని\\" అనేక ఫైల్‌లకు యాక్సెస్‌ని పునరుద్ధరించగలదు</string>
+    <string name="grayscale_info">ఈ సాధనం అన్ని డాక్యుమెంట్ చిత్రాలను గ్రేస్కేల్‌కి మారుస్తుంది. ఫైల్ పరిమాణాన్ని ముద్రించడానికి మరియు తగ్గించడానికి ఉత్తమమైనది</string>
+    <string name="metadata">మెటాడేటా</string>
+    <string name="metadata_pdf_sub">మెరుగైన గోప్యత కోసం డాక్యుమెంట్ ప్రాపర్టీలను సవరించండి</string>
+    <string name="tags">ట్యాగ్‌లు</string>
+    <string name="producer">నిర్మాత</string>
+    <string name="author">రచయిత</string>
+    <string name="keywords">కీలకపదాలు</string>
+    <string name="creator">సృష్టికర్త</string>
+    <string name="privacy_deep_clean">గోప్యత డీప్ క్లీన్</string>
+    <string name="privacy_deep_clean_sub">ఈ పత్రం కోసం అందుబాటులో ఉన్న మొత్తం మెటాడేటాను క్లియర్ చేయండి</string>
 </resources>
