--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2108,4 +2108,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">คืนค่าอิมเมจคุณภาพต่ำโดยใช้หม้อแปลง Swin2SR ซึ่งได้รับการปรับให้เหมาะสมสำหรับการย่อยสลาย BSRGAN เหมาะสำหรับการแก้ไขส่วนบีบอัดขนาดใหญ่และเพิ่มรายละเอียดในระดับ 4x</string>
     <string name="model_bsrgan_swinir_m_x4_gan">การเพิ่มสเกล 4 เท่าด้วยหม้อแปลง SwinIR ที่ได้รับการฝึกเรื่องการย่อยสลาย BSRGAN ใช้ GAN เพื่อให้พื้นผิวคมชัดขึ้นและรายละเอียดที่เป็นธรรมชาติมากขึ้นในภาพถ่ายและฉากที่ซับซ้อน</string>
     <string name="path">เส้นทาง</string>
+    <string name="merge_pdf">รวม PDF</string>
+    <string name="merge_pdf_sub">รวมไฟล์ PDF หลายไฟล์ไว้ในเอกสารเดียว</string>
+    <string name="files_order">ลำดับไฟล์</string>
+    <string name="pages_short">หน้า</string>
+    <string name="split_pdf">แยก PDF</string>
+    <string name="split_pdf_sub">แยกหน้าเฉพาะจากเอกสาร PDF</string>
+    <string name="rotate_pdf">หมุน PDF</string>
+    <string name="rotate_pdf_sub">แก้ไขการวางแนวหน้าอย่างถาวร</string>
+    <string name="pages">หน้า</string>
+    <string name="rearrange_pdf">จัดเรียง PDF ใหม่</string>
+    <string name="rearrange_pdf_sub">ลากและวางหน้าเพื่อเรียงลำดับใหม่</string>
+    <string name="hold_drag_drop">กดค้างและลากหน้า</string>
+    <string name="page_numbers">หมายเลขหน้า</string>
+    <string name="page_numbers_sub">เพิ่มการกำหนดหมายเลขให้กับเอกสารของคุณโดยอัตโนมัติ</string>
+    <string name="label_format">รูปแบบฉลาก</string>
+    <string name="pdf_to_text">PDF เป็นข้อความ (OCR)</string>
+    <string name="pdf_to_text_sub">แยกข้อความธรรมดาออกจากเอกสาร PDF ของคุณ</string>
+    <string name="watermark_pdf_sub">วางซ้อนข้อความที่กำหนดเองสำหรับการสร้างแบรนด์หรือความปลอดภัย</string>
+    <string name="signature">ลายเซ็น</string>
+    <string name="signature_sub">เพิ่มลายเซ็นอิเล็กทรอนิกส์ของคุณลงในเอกสารใดๆ</string>
+    <string name="will_be_for_signature">ซึ่งจะใช้เป็นลายเซ็น</string>
+    <string name="unlock_pdf">ปลดล็อค PDF</string>
+    <string name="unlock_pdf_sub">ลบรหัสผ่านออกจากไฟล์ที่ได้รับการป้องกัน</string>
+    <string name="protect_pdf">ป้องกัน PDF</string>
+    <string name="protect_pdf_sub">รักษาความปลอดภัยเอกสารของคุณด้วยการเข้ารหัสที่รัดกุม</string>
+    <string name="success">ความสำเร็จ</string>
+    <string name="pdf_unlocked">ปลดล็อค PDF แล้ว คุณสามารถบันทึกหรือแชร์ได้</string>
+    <string name="repair_pdf">ซ่อมแซม PDF</string>
+    <string name="repair_pdf_sub">พยายามแก้ไขเอกสารที่เสียหายหรืออ่านไม่ได้</string>
+    <string name="grayscale">ระดับสีเทา</string>
+    <string name="grayscale_pdf_sub">แปลงรูปภาพที่ฝังในเอกสารทั้งหมดให้เป็นระดับสีเทา</string>
+    <string name="compress_pdf">บีบอัด PDF</string>
+    <string name="compress_pdf_sub">ปรับขนาดไฟล์เอกสารของคุณให้เหมาะสมเพื่อการแชร์ที่ง่ายขึ้น</string>
+    <string name="repair_info">ImageToolbox สร้างตารางอ้างอิงโยงภายในใหม่ และสร้างโครงสร้างไฟล์ใหม่ตั้งแต่ต้น ซึ่งสามารถคืนค่าการเข้าถึงไฟล์จำนวนมากที่ \\"ไม่สามารถเปิดได้\\"</string>
+    <string name="grayscale_info">เครื่องมือนี้แปลงรูปภาพเอกสารทั้งหมดเป็นโทนสีเทา เหมาะสำหรับการพิมพ์และลดขนาดไฟล์</string>
+    <string name="metadata">ข้อมูลเมตา</string>
+    <string name="metadata_pdf_sub">แก้ไขคุณสมบัติของเอกสารเพื่อความเป็นส่วนตัวที่ดีขึ้น</string>
+    <string name="tags">แท็ก</string>
+    <string name="producer">ผู้ผลิต</string>
+    <string name="author">ผู้เขียน</string>
+    <string name="keywords">คำหลัก</string>
+    <string name="creator">ผู้สร้าง</string>
+    <string name="privacy_deep_clean">ความเป็นส่วนตัวอย่างล้ำลึก</string>
+    <string name="privacy_deep_clean_sub">ล้างข้อมูลเมตาที่มีอยู่ทั้งหมดสำหรับเอกสารนี้</string>
 </resources>
