--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN bozulması için optimize edilmiş Swin2SR transformatörünü kullanarak düşük kaliteli görüntüleri geri yükler. Ağır sıkıştırma bozukluklarını düzeltmek ve ayrıntıları 4x ölçekte geliştirmek için idealdir.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN bozulması konusunda eğitilmiş SwinIR transformatörüyle 4 kat yükseltme. Fotoğraflar ve karmaşık sahnelerde daha keskin dokular ve daha doğal ayrıntılar için GAN\'ı kullanır.</string>
     <string name="path">Yol</string>
+    <string name="merge_pdf">PDF\'yi birleştir</string>
+    <string name="merge_pdf_sub">Birden fazla PDF dosyasını tek bir belgede birleştirin</string>
+    <string name="files_order">Dosya Sırası</string>
+    <string name="pages_short">s.</string>
+    <string name="split_pdf">PDF\'yi böl</string>
+    <string name="split_pdf_sub">PDF belgesinden belirli sayfaları çıkarın</string>
+    <string name="rotate_pdf">PDF\'yi döndür</string>
+    <string name="rotate_pdf_sub">Sayfa yönlendirmesini kalıcı olarak düzeltin</string>
+    <string name="pages">Sayfalar</string>
+    <string name="rearrange_pdf">PDF\'yi yeniden düzenle</string>
+    <string name="rearrange_pdf_sub">Sayfaları yeniden sıralamak için sürükleyip bırakın</string>
+    <string name="hold_drag_drop">Sayfaları Tut ve Sürükle</string>
+    <string name="page_numbers">Sayfa Numaraları</string>
+    <string name="page_numbers_sub">Belgelerinize otomatik olarak numaralandırma ekleyin</string>
+    <string name="label_format">Etiket Formatı</string>
+    <string name="pdf_to_text">PDF\'den Metne (OCR)</string>
+    <string name="pdf_to_text_sub">PDF belgelerinizden düz metin çıkarın</string>
+    <string name="watermark_pdf_sub">Marka bilinci oluşturma veya güvenlik için özel metni katmanlayın</string>
+    <string name="signature">İmza</string>
+    <string name="signature_sub">Elektronik imzanızı herhangi bir belgeye ekleyin</string>
+    <string name="will_be_for_signature">Bu imza olarak kullanılacaktır</string>
+    <string name="unlock_pdf">PDF\'nin kilidini aç</string>
+    <string name="unlock_pdf_sub">Korunan dosyalarınızdan şifreleri kaldırın</string>
+    <string name="protect_pdf">PDF\'yi koruyun</string>
+    <string name="protect_pdf_sub">Belgelerinizi güçlü şifrelemeyle koruyun</string>
+    <string name="success">Başarı</string>
+    <string name="pdf_unlocked">PDF\'nin kilidi açıldı, kaydedebilir veya paylaşabilirsiniz</string>
+    <string name="repair_pdf">PDF\'yi onar</string>
+    <string name="repair_pdf_sub">Bozuk veya okunamayan belgeleri düzeltmeye çalışın</string>
+    <string name="grayscale">Gri tonlamalı</string>
+    <string name="grayscale_pdf_sub">Tüm belgeye gömülü görüntüleri gri tonlamaya dönüştürün</string>
+    <string name="compress_pdf">PDF\'yi sıkıştır</string>
+    <string name="compress_pdf_sub">Daha kolay paylaşım için belgenizin dosya boyutunu optimize edin</string>
+    <string name="repair_info">ImageToolbox dahili çapraz referans tablosunu yeniden oluşturur ve dosya yapısını sıfırdan yeniden oluşturur. Bu, \\"açılamayan\\" birçok dosyaya erişimi geri yükleyebilir</string>
+    <string name="grayscale_info">Bu araç, tüm belge resimlerini gri tonlamaya dönüştürür. Dosya boyutunu yazdırmak ve küçültmek için en iyisi</string>
+    <string name="metadata">Meta veriler</string>
+    <string name="metadata_pdf_sub">Daha iyi gizlilik için belge özelliklerini düzenleyin</string>
+    <string name="tags">Etiketler</string>
+    <string name="producer">yapımcı</string>
+    <string name="author">Yazar</string>
+    <string name="keywords">Anahtar Kelimeler</string>
+    <string name="creator">Yaratıcı</string>
+    <string name="privacy_deep_clean">Gizlilik Derinlemesine Temizlik</string>
+    <string name="privacy_deep_clean_sub">Bu belge için mevcut tüm meta verileri temizle</string>
 </resources>
