--- a/core/resources/src/main/res/values-ug/strings.xml
+++ b/core/resources/src/main/res/values-ug/strings.xml
@@ -2109,4 +2109,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN نىڭ ناچارلىشىشىغا ئەلالاشتۇرۇلغان Swin2SR تىرانسفورموتور ئارقىلىق تۆۋەن سۈپەتلىك رەسىملەرنى ئەسلىگە كەلتۈرىدۇ. ئېغىر دەرىجىدىكى پىرىسلاش بۇيۇملىرىنى ئوڭشاش ۋە 4x ئۆلچەمدە تەپسىلاتلارنى ئاشۇرۇشقا ناھايىتى ماس كېلىدۇ.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN نىڭ ناچارلىشىشى توغرىسىدا تەربىيەلەنگەن SwinIR تىرانسفورموتور بىلەن 4x يۇقىرى كۆتۈرۈلگەن. رەسىم ۋە مۇرەككەپ كۆرۈنۈشلەردە تېخىمۇ ئۆتكۈر توقۇلمىلار ۋە تېخىمۇ تەبىئىي تەپسىلاتلار ئۈچۈن GAN نى ئىشلىتىڭ.</string>
     <string name="path">Path</string>
+    <string name="merge_pdf">PDF نى بىرلەشتۈرۈش</string>
+    <string name="merge_pdf_sub">بىر نەچچە PDF ھۆججىتىنى بىر ھۆججەتكە بىرلەشتۈرۈڭ</string>
+    <string name="files_order">Files Order</string>
+    <string name="pages_short">pp.</string>
+    <string name="split_pdf">PDF نى پارچىلاش</string>
+    <string name="split_pdf_sub">PDF ھۆججىتىدىن كونكرېت بەتلەرنى چىقىرىڭ</string>
+    <string name="rotate_pdf">PDF نى ئايلاندۇرۇش</string>
+    <string name="rotate_pdf_sub">بەت يۆنىلىشىنى مەڭگۈلۈك ئوڭشاڭ</string>
+    <string name="pages">بەتلەر</string>
+    <string name="rearrange_pdf">PDF نى قايتا رەتلەڭ</string>
+    <string name="rearrange_pdf_sub">بەتلەرنى سۆرەپ تاشلاڭ</string>
+    <string name="hold_drag_drop">بەتلەرنى تۇتۇش ۋە سۆرەش</string>
+    <string name="page_numbers">بەت سانى</string>
+    <string name="page_numbers_sub">ھۆججەتلىرىڭىزگە ئاپتوماتىك نومۇر قوشۇڭ</string>
+    <string name="label_format">بەلگە فورماتى</string>
+    <string name="pdf_to_text">PDF دىن تېكىست (OCR)</string>
+    <string name="pdf_to_text_sub">PDF ھۆججىتىڭىزدىن ئاددىي تېكىستنى ئېلىڭ</string>
+    <string name="watermark_pdf_sub">ماركا ياكى بىخەتەرلىك ئۈچۈن خاس تېكىستنى قاپلاڭ</string>
+    <string name="signature">ئىمزا</string>
+    <string name="signature_sub">ھەر قانداق ھۆججەتكە ئېلېكترونلۇق ئىمزاسىڭىزنى قوشۇڭ</string>
+    <string name="will_be_for_signature">بۇ ئىمزا سۈپىتىدە ئىشلىتىلىدۇ</string>
+    <string name="unlock_pdf">PDF قۇلۇپىنى ئېچىڭ</string>
+    <string name="unlock_pdf_sub">قوغدىلىدىغان ھۆججەتلىرىڭىزدىن پارولنى ئۆچۈرۈڭ</string>
+    <string name="protect_pdf">PDF نى قوغداش</string>
+    <string name="protect_pdf_sub">كۈچلۈك مەخپىيلەشتۈرۈش ئارقىلىق ھۆججەتلىرىڭىزنى بىخەتەر قىلىڭ</string>
+    <string name="success">مۇۋەپپەقىيەت</string>
+    <string name="pdf_unlocked">PDF قۇلۇپ ئېچىلدى ، ئۇنى ساقلىسىڭىز ياكى ئورتاقلىشالايسىز</string>
+    <string name="repair_pdf">PDF نى رېمونت قىلىڭ</string>
+    <string name="repair_pdf_sub">بۇزۇلغان ياكى ئوقۇغىلى بولمايدىغان ھۆججەتلەرنى ئوڭشاشقا ئۇرۇنۇش</string>
+    <string name="grayscale">كۈلرەڭ</string>
+    <string name="grayscale_pdf_sub">بارلىق ھۆججەت قىستۇرۇلغان رەسىملەرنى كۈلرەڭگە ئۆزگەرتىڭ</string>
+    <string name="compress_pdf">PDF نى بېسىڭ</string>
+    <string name="compress_pdf_sub">ئورتاقلىشىش ئۈچۈن ھۆججەت ھۆججىتىنىڭ چوڭ-كىچىكلىكىنى ئەلالاشتۇرۇڭ</string>
+    <string name="repair_info">ImageToolbox ئىچكى ھالقىما پايدىلىنىش جەدۋىلىنى قايتا قۇرۇپ ، ھۆججەت قۇرۇلمىسىنى باشتىن-ئاخىر ئەسلىگە كەلتۈرىدۇ. بۇ \ \"ئاچقىلى بولمايدىغان \\" نۇرغۇن ھۆججەتلەرنى زىيارەت قىلىشنى ئەسلىگە كەلتۈرەلەيدۇ.</string>
+    <string name="grayscale_info">بۇ قورال بارلىق ھۆججەت رەسىملىرىنى كۈلرەڭگە ئايلاندۇرىدۇ. ھۆججەتنىڭ چوڭ-كىچىكلىكىنى بېسىپ چىقىرىش ۋە ئازايتىشتا ئەڭ ياخشى</string>
+    <string name="metadata">Metadata</string>
+    <string name="metadata_pdf_sub">تېخىمۇ ياخشى مەخپىيەتلىك ئۈچۈن ھۆججەت خاسلىقىنى تەھرىرلەڭ</string>
+    <string name="tags">خەتكۈچ</string>
+    <string name="producer">ئىشلەپچىقارغۇچى</string>
+    <string name="author">ئاپتور</string>
+    <string name="keywords">ئاچقۇچلۇق سۆزلەر</string>
+    <string name="creator">ياراتقۇچى</string>
+    <string name="privacy_deep_clean">مەخپىيەتلىك چوڭقۇر</string>
+    <string name="privacy_deep_clean_sub">بۇ ھۆججەتنىڭ بارلىق ئىشلەتكىلى بولىدىغان مېتا سانلىق مەلۇماتلىرىنى تازىلاڭ</string>
 </resources>
