--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2111,4 +2111,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Відновлює зображення низької якості за допомогою трансформатора Swin2SR, оптимізованого для деградації BSRGAN. Чудово підходить для виправлення важких артефактів стиснення та покращення деталей у 4-кратному масштабі.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4-кратне збільшення за допомогою трансформатора SwinIR, навченого на деградацію BSRGAN. Використовує GAN для більш чітких текстур і більш природних деталей на фотографіях і складних сценах.</string>
     <string name="path">шлях</string>
+    <string name="merge_pdf">Об’єднати PDF</string>
+    <string name="merge_pdf_sub">Об’єднайте кілька файлів PDF в один документ</string>
+    <string name="files_order">Порядок файлів</string>
+    <string name="pages_short">пп.</string>
+    <string name="split_pdf">Розділити PDF</string>
+    <string name="split_pdf_sub">Витягніть певні сторінки з документа PDF</string>
+    <string name="rotate_pdf">Повернути PDF</string>
+    <string name="rotate_pdf_sub">Назавжди виправити орієнтацію сторінки</string>
+    <string name="pages">сторінки</string>
+    <string name="rearrange_pdf">Перевпорядкувати PDF</string>
+    <string name="rearrange_pdf_sub">Перетягніть сторінки, щоб змінити їх порядок</string>
+    <string name="hold_drag_drop">Утримуйте та перетягуйте сторінки</string>
+    <string name="page_numbers">Номери сторінок</string>
+    <string name="page_numbers_sub">Автоматично додавайте нумерацію до документів</string>
+    <string name="label_format">Формат етикетки</string>
+    <string name="pdf_to_text">PDF в текст (OCR)</string>
+    <string name="pdf_to_text_sub">Витягніть звичайний текст із PDF-документів</string>
+    <string name="watermark_pdf_sub">Накладення спеціального тексту для брендингу або безпеки</string>
+    <string name="signature">Підпис</string>
+    <string name="signature_sub">Додайте свій електронний підпис до будь-якого документа</string>
+    <string name="will_be_for_signature">Це буде використано як підпис</string>
+    <string name="unlock_pdf">Розблокувати PDF</string>
+    <string name="unlock_pdf_sub">Видаліть паролі з захищених файлів</string>
+    <string name="protect_pdf">Захист PDF</string>
+    <string name="protect_pdf_sub">Захистіть свої документи надійним шифруванням</string>
+    <string name="success">Успіх</string>
+    <string name="pdf_unlocked">PDF розблоковано, ви можете зберегти або поділитися ним</string>
+    <string name="repair_pdf">Відремонтувати PDF</string>
+    <string name="repair_pdf_sub">Спробуйте виправити пошкоджені або нечитабельні документи</string>
+    <string name="grayscale">Відтінки сірого</string>
+    <string name="grayscale_pdf_sub">Перетворення всіх зображень, вбудованих у документ, у відтінки сірого</string>
+    <string name="compress_pdf">Стиснути PDF</string>
+    <string name="compress_pdf_sub">Оптимізуйте розмір файлу документа, щоб простіше ділитися ним</string>
+    <string name="repair_info">ImageToolbox перебудовує внутрішню таблицю перехресних посилань і генерує файлову структуру з нуля. Це може відновити доступ до багатьох файлів, які \\"неможливо відкрити\\"</string>
+    <string name="grayscale_info">Цей інструмент перетворює всі зображення документів на градації сірого. Найкраще підходить для друку та зменшення розміру файлу</string>
+    <string name="metadata">Метадані</string>
+    <string name="metadata_pdf_sub">Відредагуйте властивості документа для кращої конфіденційності</string>
+    <string name="tags">Теги</string>
+    <string name="producer">Продюсер</string>
+    <string name="author">Автор</string>
+    <string name="keywords">Ключові слова</string>
+    <string name="creator">Творець</string>
+    <string name="privacy_deep_clean">Глибоке очищення конфіденційності</string>
+    <string name="privacy_deep_clean_sub">Очистити всі доступні метадані для цього документа</string>
 </resources>
