--- a/core/resources/src/main/res/values-vi/strings.xml
+++ b/core/resources/src/main/res/values-vi/strings.xml
@@ -2108,4 +2108,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">Khôi phục hình ảnh chất lượng thấp bằng biến áp Swin2SR, được tối ưu hóa cho sự suy giảm BSRGAN. Tuyệt vời để sửa các hiện vật nén nặng và nâng cao chi tiết ở tỷ lệ 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Nâng cấp gấp 4 lần với máy biến áp SwinIR được đào tạo về suy giảm BSRGAN. Sử dụng GAN để có kết cấu sắc nét hơn và nhiều chi tiết tự nhiên hơn trong ảnh và cảnh phức tạp.</string>
     <string name="path">Con đường</string>
+    <string name="merge_pdf">Hợp nhất PDF</string>
+    <string name="merge_pdf_sub">Kết hợp nhiều tệp PDF vào một tài liệu</string>
+    <string name="files_order">Thứ tự tập tin</string>
+    <string name="pages_short">trang.</string>
+    <string name="split_pdf">Tách PDF</string>
+    <string name="split_pdf_sub">Trích xuất các trang cụ thể từ tài liệu PDF</string>
+    <string name="rotate_pdf">Xoay PDF</string>
+    <string name="rotate_pdf_sub">Sửa hướng trang vĩnh viễn</string>
+    <string name="pages">Trang</string>
+    <string name="rearrange_pdf">Sắp xếp lại PDF</string>
+    <string name="rearrange_pdf_sub">Kéo và thả các trang để sắp xếp lại chúng</string>
+    <string name="hold_drag_drop">Giữ và kéo trang</string>
+    <string name="page_numbers">Số trang</string>
+    <string name="page_numbers_sub">Tự động thêm đánh số vào tài liệu của bạn</string>
+    <string name="label_format">Định dạng nhãn</string>
+    <string name="pdf_to_text">PDF sang văn bản (OCR)</string>
+    <string name="pdf_to_text_sub">Trích xuất văn bản thuần túy từ tài liệu PDF của bạn</string>
+    <string name="watermark_pdf_sub">Lớp phủ văn bản tùy chỉnh để xây dựng thương hiệu hoặc bảo mật</string>
+    <string name="signature">Chữ ký</string>
+    <string name="signature_sub">Thêm chữ ký điện tử của bạn vào bất kỳ tài liệu nào</string>
+    <string name="will_be_for_signature">Điều này sẽ được sử dụng làm chữ ký</string>
+    <string name="unlock_pdf">Mở khóa PDF</string>
+    <string name="unlock_pdf_sub">Xóa mật khẩu khỏi các tệp được bảo vệ của bạn</string>
+    <string name="protect_pdf">Bảo vệ PDF</string>
+    <string name="protect_pdf_sub">Bảo mật tài liệu của bạn bằng mã hóa mạnh mẽ</string>
+    <string name="success">Thành công</string>
+    <string name="pdf_unlocked">Đã mở khóa PDF, bạn có thể lưu hoặc chia sẻ nó</string>
+    <string name="repair_pdf">Sửa chữa PDF</string>
+    <string name="repair_pdf_sub">Cố gắng sửa các tài liệu bị hỏng hoặc không thể đọc được</string>
+    <string name="grayscale">Thang độ xám</string>
+    <string name="grayscale_pdf_sub">Chuyển đổi tất cả các hình ảnh được nhúng trong tài liệu sang thang độ xám</string>
+    <string name="compress_pdf">Nén PDF</string>
+    <string name="compress_pdf_sub">Tối ưu hóa kích thước tệp tài liệu của bạn để chia sẻ dễ dàng hơn</string>
+    <string name="repair_info">ImageToolbox xây dựng lại bảng tham chiếu chéo nội bộ và tạo lại cấu trúc tệp từ đầu. Điều này có thể khôi phục quyền truy cập vào nhiều tệp \\"không thể mở được\\"</string>
+    <string name="grayscale_info">Công cụ này chuyển đổi tất cả hình ảnh tài liệu sang thang độ xám. Tốt nhất để in và giảm kích thước tập tin</string>
+    <string name="metadata">Siêu dữ liệu</string>
+    <string name="metadata_pdf_sub">Chỉnh sửa thuộc tính tài liệu để bảo mật tốt hơn</string>
+    <string name="tags">Thẻ</string>
+    <string name="producer">Nhà sản xuất</string>
+    <string name="author">Tác giả</string>
+    <string name="keywords">Từ khóa</string>
+    <string name="creator">Người sáng tạo</string>
+    <string name="privacy_deep_clean">Quyền riêng tư Sạch sâu</string>
+    <string name="privacy_deep_clean_sub">Xóa tất cả siêu dữ liệu có sẵn cho tài liệu này</string>
 </resources>
