--- a/core/resources/src/main/res/values-zh-rTW/strings.xml
+++ b/core/resources/src/main/res/values-zh-rTW/strings.xml
@@ -2108,4 +2108,48 @@
     <string name="model_swin2sr_x4_bsrgan_psnr">使用 Swin2SR 转换器恢复低质量图像，并针对 BSRGAN 退化进行了优化。非常适合修复严重的压缩伪影并以 4 倍比例增强细节。</string>
     <string name="model_bsrgan_swinir_m_x4_gan">使用经过 BSRGAN 退化训练的 SwinIR 变压器进行 4 倍升级。使用 GAN 在照片和复杂场景中获得更清晰的纹理和更自然的细节。</string>
     <string name="path">小路</string>
+    <string name="merge_pdf">合并PDF</string>
+    <string name="merge_pdf_sub">将多个 PDF 文件合并为一个文档</string>
+    <string name="files_order">文件顺序</string>
+    <string name="pages_short">页数</string>
+    <string name="split_pdf">分割PDF</string>
+    <string name="split_pdf_sub">从 PDF 文档中提取特定页面</string>
+    <string name="rotate_pdf">旋转 PDF</string>
+    <string name="rotate_pdf_sub">永久修复页面方向</string>
+    <string name="pages">页数</string>
+    <string name="rearrange_pdf">重新排列 PDF</string>
+    <string name="rearrange_pdf_sub">拖放页面以重新排序</string>
+    <string name="hold_drag_drop">按住并拖动页面</string>
+    <string name="page_numbers">页码</string>
+    <string name="page_numbers_sub">自动为您的文档添加编号</string>
+    <string name="label_format">标签格式</string>
+    <string name="pdf_to_text">PDF 转文本 (OCR)</string>
+    <string name="pdf_to_text_sub">从 PDF 文档中提取纯文本</string>
+    <string name="watermark_pdf_sub">覆盖自定义文本以实现品牌或安全</string>
+    <string name="signature">签名</string>
+    <string name="signature_sub">将您的电子签名添加到任何文档中</string>
+    <string name="will_be_for_signature">这将用作签名</string>
+    <string name="unlock_pdf">解锁 PDF</string>
+    <string name="unlock_pdf_sub">从受保护的文件中删除密码</string>
+    <string name="protect_pdf">保护PDF</string>
+    <string name="protect_pdf_sub">通过强大的加密保护您的文档</string>
+    <string name="success">成功</string>
+    <string name="pdf_unlocked">PDF已解锁，您可以保存或分享</string>
+    <string name="repair_pdf">修复PDF</string>
+    <string name="repair_pdf_sub">尝试修复损坏或无法读取的文档</string>
+    <string name="grayscale">灰度</string>
+    <string name="grayscale_pdf_sub">将所有文档嵌入图像转换为灰度</string>
+    <string name="compress_pdf">压缩PDF</string>
+    <string name="compress_pdf_sub">优化文档文件大小以方便共享</string>
+    <string name="repair_info">ImageToolbox 重建内部交叉引用表并从头开始重新生成文件结构。这可以恢复对许多“无法打开”文件的访问</string>
+    <string name="grayscale_info">该工具将所有文档图像转换为灰度。最适合打印和减小文件大小</string>
+    <string name="metadata">元数据</string>
+    <string name="metadata_pdf_sub">编辑文档属性以获得更好的隐私</string>
+    <string name="tags">标签</string>
+    <string name="producer">制片人</string>
+    <string name="author">作者</string>
+    <string name="keywords">关键词</string>
+    <string name="creator">创作者</string>
+    <string name="privacy_deep_clean">隐私深度清洁</string>
+    <string name="privacy_deep_clean_sub">清除该文档的所有可用元数据</string>
 </resources>
